Improved Tab Index for new connection dialog. TestConnection enhanced dialog information displayed. Refresh context menu strip is now displayed inside all Connections list's area.

--- a/source/Panels/WelcomePanel.resx
+++ b/source/Panels/WelcomePanel.resx
@@ -124,116 +124,118 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABW
-        GQAAAk1TRnQBSQFMAwEBAAEoAQYBKAEGASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABC
+        GQAAAk1TRnQBSQFMAwEBAAFgAQYBYAEGASABAAEgAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABgAMA
         ASADAAEBAQABIAYAAUBeAAMHAQkDDwQUARsDFgEeAxgBIQMWAR8DFQEdAxIBGQMMARADBAEG/wC0AAEB
         AwQBBgMHBAoBDQMLAQ8DCwEPAwsBDwMNARIDHwEsAysEQgF1A1EBogFXAloBvQFZAlwByQFYAlwB0QFc
         Al4BzgNZAccDVgG2AU0CTgGVAzkBXwMjATMDEgEY/wClAAMKAQ0DEAEVAyEBMANCAXQDUgGkA1gBwQNd
-        AdIDXAHPA1wBzwFUAmEB7gEXAn8B/gEFAZ0BwAH/ASoBrgHKAf8BPQG4AdEB/wFAAbwB1QH/ATQBuQHW
-        Af8BHwGxAdMB/wELAagBzwH/AQABnQHIAf8BAAGOAbkB/wEAAU0BowH/AVECbQH3AVUCVgG0AxwBJ/8A
+        AdIDXAHPA1wBzwFUAmEB7gEXAn8B/gEAAZ0BwAH/ASMBrgHKAf8BNgG4AdEB/wE5AbwB1QH/AS0BuQHW
+        Af8BGAGxAdMB/wEEAagBzwH/AQABnQHIAf8BAAGOAbkB/wEAAUYBowH/AVECbQH3AVUCVgG0AxwBJ/8A
         oQADNgFYA1kBvgG3AZoBlgH/AcMBrAGoAf8BzgG6AbcB/wHVAcQBwAH/AeAB0wHQAf8BuwG4AbcB/wEA
-        AZMBuAH/AQABqQHcAf8BOQHJAfkB/wGrAeMB/QH/AdQB8gH9Af8B0QHzAf0B/wG/Ae8B/QH/AaQB6AH+
-        Af8BhAHfAf4B/wE3AdYB/gH/ARsBzwL/AQgBygL/AQcByQL/AYYB0wHsAf8BDQGUAbYB/wFcAmEB3P8A
+        AZMBuAH/AQABqQHcAf8BMgHJAfkB/wGrAeMB/QH/AdQB8gH9Af8B0QHzAf0B/wG/Ae8B/QH/AaQB6AH+
+        Af8BhAHfAf4B/wEwAdYB/gH/ARQBzwL/AQEBygL/AQAByQL/AYYB0wHsAf8BBgGUAbYB/wFcAmEB3P8A
         mQADKwFCA1YBqwG8AaEBnQH/AdEBvwG7Af8B3wHTAc8B/wHjAdgB1AH/AeQB2wHXAf8B5wHeAdkB/wHr
-        AeQB4AH/AYgBswG/Af8BAAGlAeAB/wEMAbwC/wE/Ac0B/gH/AasB4wH9Af8B1AHyAf0B/wHRAfMB/QH/
-        Ab8B7wH9Af8BpAHoAf4B/wGEAd8B/gH/ATcB1gH+Af8BGwHPAv8BCAHKAv8BBwHJAv8BogHoAv8BqQHo
+        AeQB4AH/AYgBswG/Af8BAAGlAeAB/wEFAbwC/wE4Ac0B/gH/AasB4wH9Af8B1AHyAf0B/wHRAfMB/QH/
+        Ab8B7wH9Af8BpAHoAf4B/wGEAd8B/gH/ATAB1gH+Af8BFAHPAv8BAQHKAv8BAAHJAv8BogHoAv8BqQHo
         Av8BDQJ/Af7/AJUAA0QBewG1AZcBkwH/AckBtgGyAf8B2gHMAcgB/wHeAdIBzgH/AeIB1gHSAf8B5AHa
-        AdUB/wHlAdwB1wH/AekB4AHcAf8B6wHjAd8B/wGHAbMBwAH/AQABqAHoAf8BDAG8Av8BPwHNAf4B/wGr
-        AeMB/QH/AdQB8gH9Af8B0QHzAf0B/wG/Ae8B/QH/AaQB6AH+Af8BhAHfAf4B/wE3AdYB/gH/ARsBzwL/
-        AQgBygL/AQcByQL/AaIB6AL/AakB6AL/ARECfwH+/wCRAANJAYcBtwGbAZcB/wHUAcQBwgH/AdYBxwHD
+        AdUB/wHlAdwB1wH/AekB4AHcAf8B6wHjAd8B/wGHAbMBwAH/AQABqAHoAf8BBQG8Av8BOAHNAf4B/wGr
+        AeMB/QH/AdQB8gH9Af8B0QHzAf0B/wG/Ae8B/QH/AaQB6AH+Af8BhAHfAf4B/wEwAdYB/gH/ARQBzwL/
+        AQEBygL/AQAByQL/AaIB6AL/AakB6AL/ARECfwH+/wCRAANJAYcBtwGbAZcB/wHUAcQBwgH/AdYBxwHD
         Af8B2gHNAckB/wHeAdIBzgH/AeEB1gHSAf8B4wHZAdQB/wHlAdsB1gH/Ae0B5QHhAf8B7gHpAeUB/wGK
-        AbgBxQH/AQABqAHoAf8BDAG8Av8BPwHNAf4B/wGrAeMB/QH/AdQB8gH9Af8B0QHzAf0B/wG/Ae8B/QH/
-        AaQB6AH+Af8BhAHfAf4B/wE3AdYB/gH/ARsBzwL/AQgBygL/AQcByQL/AaIB6AL/AakB6AL/ARICfwH+
+        AbgBxQH/AQABqAHoAf8BBQG8Av8BOAHNAf4B/wGrAeMB/QH/AdQB8gH9Af8B0QHzAf0B/wG/Ae8B/QH/
+        AaQB6AH+Af8BhAHfAf4B/wEwAdYB/gH/ARQBzwL/AQEBygL/AQAByQL/AaIB6AL/AakB6AL/ARICfwH+
         /wCNAANGAX8BtgGaAZYB/wHNAb0BuQH/AdcBygHGAf8B1QHFAcEB/wHZAcoBxgH/AdwB0AHLAf8B3wHT
-        Ac4B/wHhAdYB0QH/AeMB2QHTAf8B+gH4AfcB/wP+Af8BiwG5AcYB/wEAAakB6AH/AQwBvAL/AT8BzQH+
-        Af8BqwHjAf0B/wHUAfIB/QH/AdEB8wH9Af8BvwHvAf0B/wGkAegB/gH/AYQB3wH+Af8BNwHWAf4B/wEb
-        Ac8C/wEIAcoC/wEHAckC/wGiAegC/wGpAegC/wESAn8B/v8AiQADMQFPAbMBlgGSAf8BwAGtAakB/wHT
+        Ac4B/wHhAdYB0QH/AeMB2QHTAf8B+gH4AfcB/wP+Af8BiwG5AcYB/wEAAakB6AH/AQUBvAL/ATgBzQH+
+        Af8BqwHjAf0B/wHUAfIB/QH/AdEB8wH9Af8BvwHvAf0B/wGkAegB/gH/AYQB3wH+Af8BMAHWAf4B/wEU
+        Ac8C/wEBAcoC/wEAAckC/wGiAegC/wGpAegC/wESAn8B/v8AiQADMQFPAbMBlgGSAf8BwAGtAakB/wHT
         AcQBwQH/AdABwAG9Af8B0QHBAbwB/wHVAcYBwQH/AdkBywHGAf8B3AHPAckB/wHfAdIBzAH/AeUB3AHX
-        Af8B8AHqAeYB/wHwAesB5wH/AYsBuQHEAf8BAAGoAecB/wEMAbwC/wE/Ac0B/gH/AasB4wH9Af8B1AHy
-        Af0B/wHRAfMB/QH/Ab0B7gH8Af8BmgHhAfgB/wFQAdoB+QH/ATcB1gH+Af8BGwHPAv8BCAHKAv8BBwHJ
+        Af8B8AHqAeYB/wHwAesB5wH/AYsBuQHEAf8BAAGoAecB/wEFAbwC/wE4Ac0B/gH/AasB4wH9Af8B1AHy
+        Af0B/wHRAfMB/QH/Ab0B7gH8Af8BmgHhAfgB/wFJAdoB+QH/ATAB1gH+Af8BFAHPAv8BAQHKAv8BAAHJ
         Av8BogHoAv8BqQHoAv8BEQJ/Af7/AIkAA1cBuAG1AZ8BmwH/Ab4BqwGnAf8B1AHGAcMB/wHJAbYBsgH/
         Ac0BugG1Af8B0AG/AbkB/wHVAcUBvwH/AdgByQHDAf8B3wHUAc4B/wHmAd0B2AH/AeQB2gHTAf8B6gHj
-        Ad0B/wHAAtAB/wEAAZ4ByQH/AQYBtAHvAf8BGwG2AeIB/wEZAa4BzwH/AQUBoQHCAf8BAAGaAbwB/wEA
-        AZgBugH/AQABmAG6Af8BAAGRAbYB/wEAAYsBsQH/AQABhAGrAf8BAAGJAbEB/wEAAZQBwAH/AT4BvwHc
-        Af8BQQG9AdsB/wFZAmcB8v8AhQADOgFiAbABlAGQAf8BswGfAZsB/wG6AaYBoQH/AdEBwgG+Af8BwwGu
+        Ad0B/wHAAtAB/wEAAZ4ByQH/AQABtAHvAf8BFAG2AeIB/wESAa4BzwH/AQABoQHCAf8BAAGaAbwB/wEA
+        AZgBugH/AQABmAG6Af8BAAGRAbYB/wEAAYsBsQH/AQABhAGrAf8BAAGJAbEB/wEAAZQBwAH/ATcBvwHc
+        Af8BOgG9AdsB/wFZAmcB8v8AhQADOgFiAbABlAGQAf8BswGfAZsB/wG6AaYBoQH/AdEBwgG+Af8BwwGu
         AakB/wHGAbIBrAH/AcsBtwGxAf8B0AG+AbgB/wHVAcYBvwH/AeMB2AHTAf8B2gHNAcYB/wHfAdIBywH/
-        AekB4QHcAf8B1wHPAccB/wEAAZEBswH/AQABpQHNAf8BGwG3AeIB/wGPAdUB8QH/Ac0B7wH7Af8B0QHz
-        Af0B/wG/Ae8B/QH/AaQB6AH+Af8BhAHfAf4B/wE3AdYB/gH/ARsBzwL/AQQBxAH4Af8BAAGzAeYB/wEc
-        AacBxwH/AQABSwGeAf8BVgJZAb7/AIUAA1sBywGnAZEBjQH/Aa0BmAGUAf8BtAGeAZkB/wHLAbsBtwH/
+        AekB4QHcAf8B1wHPAccB/wEAAZEBswH/AQABpQHNAf8BFAG3AeIB/wGPAdUB8QH/Ac0B7wH7Af8B0QHz
+        Af0B/wG/Ae8B/QH/AaQB6AH+Af8BhAHfAf4B/wEwAdYB/gH/ARQBzwL/AQABxAH4Af8BAAGzAeYB/wEV
+        AacBxwH/AQABRAGeAf8BVgJZAb7/AIUAA1sBywGnAZEBjQH/Aa0BmAGUAf8BtAGeAZkB/wHLAbsBtwH/
         AbsBpAGfAf8BwAGpAaMB/wHEAa8BqAH/AckBtgGuAf8B2wHOAcgB/wHVAcUBvgH/AdYBxwG+Af8B2QHL
-        AcQB/wHlAdwB1gH/AZQBtAG6Af8BAAGpAdoB/wEMAbsB/gH/AT8BzQH+Af8BqwHjAf0B/wHUAfIB/QH/
-        AdEB8wH9Af8BvwHvAf0B/wGkAegB/gH/AYQB3wH+Af8BNwHWAf4B/wEbAc8C/wEIAcoC/wEHAckC/wGi
-        AegC/wGVAdoB8wH/ASsBQwFeAfz/AIEAAyABLwGtAZABjAH/AZ0BiAGEAf8BpgGQAYsB/wGsAZUBkAH/
+        AcQB/wHlAdwB1gH/AZQBtAG6Af8BAAGpAdoB/wEFAbsB/gH/ATgBzQH+Af8BqwHjAf0B/wHUAfIB/QH/
+        AdEB8wH9Af8BvwHvAf0B/wGkAegB/gH/AYQB3wH+Af8BMAHWAf4B/wEUAc8C/wEBAcoC/wEAAckC/wGi
+        AegC/wGVAdoB8wH/ASsBOgFXAfz/AIEAAyABLwGtAZABjAH/AZ0BiAGEAf8BpgGQAYsB/wGsAZUBkAH/
         AcQBswGuAf8BtgGdAZcB/wG4AZ8BmAH/Ab0BpAGeAf8ByQG0Aa0B/wHVAcUBvwH/Ac0BugGyAf8B0AG/
-        AbcB/wHUAcMBuwH/AeEB1gHPAf8BigG5AcUB/wEAAa0B7AH/AQwBvAL/AT8BzQH+Af8BqwHjAf0B/wHU
-        AfIB/QH/AdEB8wH9Af8BvwHvAf0B/wGkAegB/gH/AYQB3wH+Af8BNwHWAf4B/wEbAc8C/wEIAcoC/wEH
-        AckC/wGiAegC/wGpAegC/wEQAn8B/v8AgQADRAF7AZ8BhgGCAf8BlQFSAU4B/wGdAYYBgQH/AaQBiwGF
+        AbcB/wHUAcMBuwH/AeEB1gHPAf8BigG5AcUB/wEAAa0B7AH/AQUBvAL/ATgBzQH+Af8BqwHjAf0B/wHU
+        AfIB/QH/AdEB8wH9Af8BvwHvAf0B/wGkAegB/gH/AYQB3wH+Af8BMAHWAf4B/wEUAc8C/wEBAcoC/wEA
+        AckC/wGiAegC/wGpAegC/wEQAn8B/v8AgQADRAF7AZ8BhgGCAf8BlQFLAUcB/wGdAYYBgQH/AaQBiwGF
         Af8BuQGkAaAB/wGyAZkBkwH/Aa8BlAGNAf8BtQGaAZIB/wHNAboBtAH/AcQBrAGlAf8BxgGxAakB/wHK
-        AbcBrgH/Ac0BugGzAf8B9gHyAfEB/wGXAcoB2QH/AQABrgHtAf8BDAG8Av8BPwHNAf4B/wGrAeMB/QH/
-        AdQB8gH9Af8B0QHzAf0B/wG/Ae8B/QH/AaQB6AH+Af8BhAHfAf4B/wE3AdYB/gH/ARsBzwL/AQgBygL/
-        AQcByQL/AaIB6AL/AakB6AL/ARACfwH+/wCBAANVAbUBkAFLAUcB/wGMAUgBRAH/AZMBTgFJAf8BmQFS
-        AU0B/wGqAZEBjAH/AbEBmQGUAf8BpwGJAYIB/wGwAZQBjgH/AdUByAHDAf8BygG2AbAB/wHNAboBsgH/
-        AdQBxAG+Af8B1gHHAcEB/wHtAecB5AH/AZgBygHYAf8BAAGuAe0B/wEMAbwC/wE/Ac0B/gH/AasB4wH9
-        Af8B1AHyAf0B/wHRAfMB/QH/Ab8B7wH9Af8BpAHoAf4B/wGEAd8B/gH/ATcB1gH+Af8BGwHPAv8BCAHK
-        Av8BBwHJAv8BogHoAv8BqQHoAv8BEAJ/Af7/AIEAA2EB2gFOATgBNQH/AYEBPAE4Af8BiAFCAT0B/wGP
-        AUcBQQH/AZcBTgFIAf8BtwGhAZwB/wGtAZIBiwH/AcEBrQGoAf8B6QHiAeAB/wHVAcUBwAH/AbsBoQGZ
-        Af8BugGgAZgB/wG+AaYBnQH/AcEBqQGhAf8BSgGeAacB/wEAAa8B7gH/AQwBvAL/AT8BzQH+Af8BqwHj
-        Af0B/wHUAfIB/QH/AdEB8wH9Af8BvwHvAf0B/wGkAegB/gH/AYQB3wH+Af8BNwHWAf4B/wEbAc8C/wEI
-        AcoC/wEHAckC/wGiAegC/wGpAegC/wERAn8B/v8AgQADZAHsAToBJQEjAf8BRwEvASsB/wFPATYBMQH/
-        AYYBPwE5Af8BsgGeAZoB/wH8AvoB/wGmAYwBhQH/AbYBngGYAf8BoAGAAUsB/wGmAYYBUgH/AasBjQGE
-        Af8BsAGTAYsB/wG0AZgBjwH/AbYBmwGSAf8BQwGUAZ4B/wEAAa8B7gH/AQwBvAL/ATUByAH3Af8BTAHM
-        AeoB/wFKAcgB3wH/ATcBvwHXAf8BJgG1AdIB/wEZAa8BzwH/AQwBqQHLAf8BAAGkAcsB/wEAAaIBzAH/
-        AQABpgHUAf8BAAGxAeIB/wGXAeAB+AH/AakB6AL/ARICfwH+/wCBAANkAewBKQEWARIB/wE0AR0BGQH/
-        AYIBPgE6Af8BngGJAYYB/wGMAUQBPgH/Aa4BmQGUAf8BlwFNAUYB/wGsAZMBjQH/AZYBSAFAAf8BnAFO
-        AUYB/wGhAYEBSwH/AaYBhgFRAf8BqQGKAYIB/wGrAY0BhAH/AT0BjQGWAf8BAAGwAegB/wEBAbYB4QH/
-        ARUBwwHoAf8BQAHTAfIB/wGgAeQB9wH/AbMB6gH7Af8BsAHpAf0B/wGkAeQB/QH/AZMB3gH9Af8BUgHX
-        Af0B/wE5AcwB+QH/ATMBxgHyAf8BLwG8AeQB/wEaAagBzAH/ARkBpgHFAf8BEAJ/Af7/AIEAA2EB2gEi
-        AQ0BCwH/AUYBNQEzAf8BUAE8ATgB/wE9ASEBGwH/AUMBJQEfAf8BgAE1ATAB/wGxAZ0BmQH/AaABhgGA
-        Af8BjQE+ATYB/wGSAUMBPAH/AZcBSAFAAf8BmwFNAUUB/wGeAVABSAH/AaABUgFKAf8BMwGMAZgB/wEA
-        AbwB5QH/ARoB0QL/AT8B2wH+Af8BmQHnAf4B/wG3Ae0B/QH/AbUB6wH9Af8BrAHnAf0B/wGdAeIB/QH/
-        AYsB2wH9Af8BSgHUAf0B/wE2Ac0B/QH/AUQB0QH+Af8BhgHXAf4B/wGdAd8C/wGnAeAB+wH/AQABkAG1
-        Af//AIEAA1UBtQFDATEBLgH/ASEBEAENAf8BGQEBAQAB/wEsAREBDAH/AT0BIAEbAf8BoQGNAYkB/wP+
-        Af8B9ALxAf8BlAFLAUUB/wGVAUoBRAH/AZcBTAFFAf8BmAFLAUQB/wGVAUYBPgH/AZUBRgE+Af8BOwGG
-        AY4B/wEFAcMB7gH/ASgB1QL/AU8B3wH+Af8BqgHrAf0B/wG4Ae0B/QH/AbIB6gH9Af8BpgHlAf0B/wGW
-        Ad8B/QH/AYMB2AH9Af8BQQHRAf0B/wErAckB/gH/ATQBywH+Af8BSwHSAf4B/wGSAdsC/wGoAeIC/wE/
-        An8B/v8AgQADRAF6AUUBLAEpAf8BDgIAAf8BNgElASQB/wFPAT4BOwH/AYEBQAE8Af8BoAGPAYsB/wP+
-        Af8B8wHxAfAB/wGPAUcBQgH/AZMBSgFEAf8BmQFQAUsB/wGgAYYBgAH/AagBjwGKAf8BqwGSAY0B/wGp
-        AY8BiQH/AQ8BpgHCAf8BIwHLAe8B/wGNAeMB/AH/AbUB7QH9Af8BtgHsAf0B/wGuAegB/QH/AaAB4wH9
-        Af8BjgHcAf0B/wFNAdUB/QH/ATgBzgH9Af8BIgHGAf4B/wEPAb8B/gH/ASgBxwH+Af8BPAHJAfcB/wEb
-        AaoB0AH/AUYCRwGB/wCBAAMgAS8BnwGDAYAB/wEuAR8BHQH/AQ4CAAH/AQoCAAH/ARkBAQEAAf8BKAEO
-        AQkB/wGgAY4BiwH/AY4BSwFGAf8BQAEhARsB/wFGASYBIAH/AUoBKgEjAf8BTgEtASYB/wFQAS8BKAH/
-        AVIBMQEqAf8BggE1AS4B/wGRAUcBQQH/AYABjwGUAf8BGgGsAccB/wEVAbQB0gH/ASYBvgHbAf8BLwHB
-        Ad8B/wEqAb4B3wH/ASUBvAHfAf8BFwG0AdwB/wEIAasB1wH/AQABowHRAf8BAAGWAcIB/wEAAYoBswH/
-        AVUCVgG0Aw4BE/8AiQADWwHLARsBBQEDAf8DAAH/AwAB/wEIAgAB/wEVAgAB/wFQAT0BOgH/AY4BTgFK
-        Af8BOgEdARgB/wE/ASIBHQH/AUMBJQEfAf8BRgEoASIB/wFIASkBJAH/AUkBKwElAf8BSwEsASYB/wFJ
-        ASsBJQH/AUgBKQEkAf8BzwHFAcIB/wG1AaUBogH/AUkBLgEpAf8BOgEdARgB/wE0AR4BGgH/AkoBTAH/
-        AU4BTwFRAf8BCAIAAf8DAAH/AUIBKQEmAf8DRwGB/wCRAAM6AWIBiQFBAT4B/wMAAf8DAAH/AwAB/wEK
-        AgAB/wFLATwBOgH/AUYBMwExAf8BSAE0ATEB/wE8ASMBHwH/AUABJwEiAf8BQwEoASMB/wFGASoBJgH/
-        AUYBLAEnAf8BRwEsAScB/wFGASwBJwH/AUYBKgEmAf8BgQE8ATcB/wGFAUMBPwH/AZMBgQFRAf8BRQEx
-        AS4B/wEnARABDgH/AYQBSgFIAf8B5QHjAeIB/wMAAf8BBgIAAf8BqAGKAYcB/wMSARj/AJUAA1cBtwEl
-        AQ8BDAH/AwAB/wMAAf8BBgIAAf8BQQE0ATMB/wE2AScBJQH/AYsBUQFPAf8BNgEjASAB/wE7AScBIwH/
-        AT8BKQEmAf8BQgEtASgB/wFFAS4BKgH/AUUBLwErAf8BRQEuASoB/wFCAS0BKAH/AVABPAE6Af8BgQFD
-        AUAB/wE2ASMBIQH/AYUBSgFIAf8BMAEgAR8B/wEtAR4BHQH/ARcBBgEFAf8DAAH/AU0BMwEwAf8DSQGI
-        /wCZAAMxAU4BpgGIAYUB/wELAgAB/wMAAf8DAAH/ATwBLgEtAf8BgQFJAUcB/wFMAUABPgH/AVIBRwFF
-        Af8BOgErASoB/wE9AS0BLAH/AUABMAEuAf8BQQExAS8B/wFCATIBMAH/AUEBMAEuAf8BQAEwAS4B/wFJ
-        ATsBOgH/AYUBTAFKAf8BNwEpAScB/wE4ASoBKAH/AaEBmAGXAf8BTQFAAT8B/wMAAf8BJgEQAQ0B/wGy
-        AZQBkAH/AwIBA/8AnQADRgF/AZkBTwFLAf8BBwIAAf8DAAH/ASIBEgEQAf8BnQGUAZMB/wFLAT4BPQH/
-        AZsBkgGRAf8BgAFHAUYB/wFJAT0BPAH/AUkBPAE7Af8BSQE8ATsB/wFJAT0BPAH/AUkBPAE7Af8BSQE8
-        ATsB/wFOAUIBQQH/AZYCjAH/AUkBPAE7Af8BSAE9ATsB/wHCAbwBuwH/AYABSAFHAf8BHAEGAQQB/wGr
-        AY0BiQH/AzABTP8ApQADSQGHAZoBUAFMAf8BDQIAAf8BAgIAAf8BiwGBAYAB/wGlAZ0BnAH/AY4BhAGD
-        Af8BrAGlAaQB/wGRAYgBhwH/AYwBggGBAf8BiwGBAYAB/wGMAYIBgQH/AYsBgQGAAf8BiwGBAYAB/wGL
-        AYEBgAH/Aa0CpQH/AY4BhAGDAf8BggFKAUgB/wERAgAB/wEjAQ0BCgH/AawBjQGJAf8DOgFg/wCtAANE
-        AXsBqQGLAYcB/wEtARYBEwH/AQwCAAH/AaUBnQGcAf8BtAGtAawB/wGlAZwBmwH/AboBtAGzAf8BqAGg
-        AZ8B/wGgAZcBlgH/AaEBmAGXAf8BoQGYAZcB/wGgAZcBlgH/AaEBmAGXAf8BxQHAAb8B/wHIAcMBwgH/
-        ARQBAgEAAf8BRQEsASkB/wGxAZMBjwH/AzMBUv8AtQADKQE/A1MBqAGTAUoBRwH/AS0BGAEVAf8BkAGG
-        AYQB/wHIAcMBwgH/AcQBvwG+Af8ByQHEAcMB/wHBAb0BvAH/AbYBsAGvAf8BtQGvAa4B/wG2AbABrwH/
-        AaMBmwGaAf8BggFJAUgB/wGjAZUBkwH/AaMBhgGCAf8DSgGNAw0BEf8AwQADLwFKA1YBswGmAYgBhAH/
-        AY0BSQFFAf8BnwGQAY4B/wG5AbABrwH/AcUCvQH/AbACpwH/AZ8BkgGRAf8BjAFMAUoB/wGNAUQBQQH/
-        Aa4BkAGMAf8DTAGTAx0BKv8A0QADEgEZAzgBXgNOAZgDVwG3A1wByQNbAcQDVQGyA0oBiQMwAUwDBwEJ
-        /wCxAAFCAU0BPgcAAT4DAAEoAwABgAMAASADAAEBAQABAQYAAQIWAAP/AQAC/wHgAQcMAAH/AYABAAEB
-        DAAB/w8AAf8PAAH8DwAB+A8AAfAPAAHgDwABwA8AAcAPAAGADwABgKIAAQEMAAGAAgABBwwAAYACAAEH
-        DAABwAIAAQ8MAAHAAgABDwwAAeACAAEfDAAB8AIAAT8MAAH4AgABfwwAAfwCAAH/DAAB/wEAAQMB/wwA
-        Af8BwAEPAf8MAAs=
+        AbcBrgH/Ac0BugGzAf8B9gHyAfEB/wGXAcoB2QH/AQABrgHtAf8BBQG8Av8BOAHNAf4B/wGrAeMB/QH/
+        AdQB8gH9Af8B0QHzAf0B/wG/Ae8B/QH/AaQB6AH+Af8BhAHfAf4B/wEwAdYB/gH/ARQBzwL/AQEBygL/
+        AQAByQL/AaIB6AL/AakB6AL/ARACfwH+/wCBAANVAbUBkAFEAUAB/wGMAUEBPQH/AZMBRwFCAf8BmQFL
+        AUYB/wGqAZEBjAH/AbEBmQGUAf8BpwGJAYIB/wGwAZQBjgH/AdUByAHDAf8BygG2AbAB/wHNAboBsgH/
+        AdQBxAG+Af8B1gHHAcEB/wHtAecB5AH/AZgBygHYAf8BAAGuAe0B/wEFAbwC/wE4Ac0B/gH/AasB4wH9
+        Af8B1AHyAf0B/wHRAfMB/QH/Ab8B7wH9Af8BpAHoAf4B/wGEAd8B/gH/ATAB1gH+Af8BFAHPAv8BAQHK
+        Av8BAAHJAv8BogHoAv8BqQHoAv8BEAJ/Af7/AIEAA2EB2gFHATEBLgH/AYEBNQExAf8BiAE7ATYB/wGP
+        AUABOgH/AZcBRwFBAf8BtwGhAZwB/wGtAZIBiwH/AcEBrQGoAf8B6QHiAeAB/wHVAcUBwAH/AbsBoQGZ
+        Af8BugGgAZgB/wG+AaYBnQH/AcEBqQGhAf8BQwGeAacB/wEAAa8B7gH/AQUBvAL/ATgBzQH+Af8BqwHj
+        Af0B/wHUAfIB/QH/AdEB8wH9Af8BvwHvAf0B/wGkAegB/gH/AYQB3wH+Af8BMAHWAf4B/wEUAc8C/wEB
+        AcoC/wEAAckC/wGiAegC/wGpAegC/wERAn8B/v8AgQADZAHsATMBHgEcAf8BQAEoASQB/wFIAS8BKgH/
+        AYYBOAEyAf8BsgGeAZoB/wH8AvoB/wGmAYwBhQH/AbYBngGYAf8BoAGAAUQB/wGmAYYBSwH/AasBjQGE
+        Af8BsAGTAYsB/wG0AZgBjwH/AbYBmwGSAf8BPAGUAZ4B/wEAAa8B7gH/AQUBvAL/AS4ByAH3Af8BRQHM
+        AeoB/wFDAcgB3wH/ATABvwHXAf8BHwG1AdIB/wESAa8BzwH/AQUBqQHLAf8BAAGkAcsB/wEAAaIBzAH/
+        AQABpgHUAf8BAAGxAeIB/wGXAeAB+AH/AakB6AL/ARICfwH+/wCBAANkAewBIgEPAQsB/wEtARYBEgH/
+        AYIBNwEzAf8BngGJAYYB/wGMAT0BNwH/Aa4BmQGUAf8BlwFGAT8B/wGsAZMBjQH/AZYBQQE5Af8BnAFH
+        AT8B/wGhAYEBRAH/AaYBhgFKAf8BqQGKAYIB/wGrAY0BhAH/ATYBjQGWAf8BAAGwAegB/wEAAbYB4QH/
+        AQ4BwwHoAf8BOQHTAfIB/wGgAeQB9wH/AbMB6gH7Af8BsAHpAf0B/wGkAeQB/QH/AZMB3gH9Af8BSwHX
+        Af0B/wEyAcwB+QH/ASwBxgHyAf8BKAG8AeQB/wETAagBzAH/ARIBpgHFAf8BEAJ/Af7/AIEAA2EB2gEb
+        AQYBBAH/AT8BLgEsAf8BSQE1ATEB/wE2ARoBFAH/ATwBHgEYAf8BgAEuASkB/wGxAZ0BmQH/AaABhgGA
+        Af8BjQE3AS8B/wGSATwBNQH/AZcBQQE5Af8BmwFGAT4B/wGeAUkBQQH/AaABSwFDAf8BLAGMAZgB/wEA
+        AbwB5QH/ARMB0QL/ATgB2wH+Af8BmQHnAf4B/wG3Ae0B/QH/AbUB6wH9Af8BrAHnAf0B/wGdAeIB/QH/
+        AYsB2wH9Af8BQwHUAf0B/wEvAc0B/QH/AT0B0QH+Af8BhgHXAf4B/wGdAd8C/wGnAeAB+wH/AQABkAG1
+        Af//AIEAA1UBtQE8ASoBJwH/ARoBCQEGAf8BEgIAAf8BJQEKAQUB/wE2ARkBFAH/AaEBjQGJAf8D/gH/
+        AfQC8QH/AZQBRAE+Af8BlQFDAT0B/wGXAUUBPgH/AZgBRAE9Af8BlQE/ATcB/wGVAT8BNwH/ATQBhgGO
+        Af8BAAHDAe4B/wEhAdUC/wFIAd8B/gH/AaoB6wH9Af8BuAHtAf0B/wGyAeoB/QH/AaYB5QH9Af8BlgHf
+        Af0B/wGDAdgB/QH/AToB0QH9Af8BJAHJAf4B/wEtAcsB/gH/AUQB0gH+Af8BkgHbAv8BqAHiAv8BPwJ/
+        Af7/AIEAA0QBegE+ASUBIgH/AQcCAAH/AS8BHgEdAf8BSAE3ATQB/wGBATkBNQH/AaABjwGLAf8D/gH/
+        AfMB8QHwAf8BjwFAATsB/wGTAUMBPQH/AZkBSQFEAf8BoAGGAYAB/wGoAY8BigH/AasBkgGNAf8BqQGP
+        AYkB/wEIAaYBwgH/ARwBywHvAf8BjQHjAfwB/wG1Ae0B/QH/AbYB7AH9Af8BrgHoAf0B/wGgAeMB/QH/
+        AY4B3AH9Af8BRgHVAf0B/wExAc4B/QH/ARsBxgH+Af8BCAG/Af4B/wEhAccB/gH/ATUByQH3Af8BFAGq
+        AdAB/wFGAkcBgf8AgQADIAEvAZ8BgwGAAf8BJwEYARYB/wEHAgAB/wEDAgAB/wESAgAB/wEhAQcBAgH/
+        AaABjgGLAf8BjgFEAT8B/wE5ARoBFAH/AT8BHwEZAf8BQwEjARwB/wFHASYBHwH/AUkBKAEhAf8BSwEq
+        ASMB/wGCAS4BJwH/AZEBQAE6Af8BgAGPAZQB/wETAawBxwH/AQ4BtAHSAf8BHwG+AdsB/wEoAcEB3wH/
+        ASMBvgHfAf8BHgG8Ad8B/wEQAbQB3AH/AQEBqwHXAf8BAAGjAdEB/wEAAZYBwgH/AQABigGzAf8BVQJW
+        AbQDDgET/wCJAANbAcsBFAIAAf8DAAH/AwAB/wEBAgAB/wEOAgAB/wFJATYBMwH/AY4BRwFDAf8BMwEW
+        AREB/wE4ARsBFgH/ATwBHgEYAf8BPwEhARsB/wFBASIBHQH/AUIBJAEeAf8BRAElAR8B/wFCASQBHgH/
+        AUEBIgEdAf8BzwHFAcIB/wG1AaUBogH/AUIBJwEiAf8BMwEWAREB/wEtARcBEwH/AkMBRQH/AUcBSAFK
+        Af8BAQIAAf8DAAH/ATsBIgEfAf8DRwGB/wCRAAM6AWIBiQE6ATcB/wMAAf8DAAH/AwAB/wEDAgAB/wFE
+        ATUBMwH/AT8BLAEqAf8BQQEtASoB/wE1ARwBGAH/ATkBIAEbAf8BPAEhARwB/wE/ASMBHwH/AT8BJQEg
+        Af8BQAElASAB/wE/ASUBIAH/AT8BIwEfAf8BgQE1ATAB/wGFATwBOAH/AZMBgQFKAf8BPgEqAScB/wEg
+        AQkBBwH/AYQBQwFBAf8B5QHjAeIB/wMAAf8DAAH/AagBigGHAf8DEgEY/wCVAANXAbcBHgEIAQUB/wMA
+        Af8DAAH/AwAB/wE6AS0BLAH/AS8BIAEeAf8BiwFKAUgB/wEvARwBGQH/ATQBIAEcAf8BOAEiAR8B/wE7
+        ASYBIQH/AT4BJwEjAf8BPgEoASQB/wE+AScBIwH/ATsBJgEhAf8BSQE1ATMB/wGBATwBOQH/AS8BHAEa
+        Af8BhQFDAUEB/wEpARkBGAH/ASYBFwEWAf8BEAIAAf8DAAH/AUYBLAEpAf8DSQGI/wCZAAMxAU4BpgGI
+        AYUB/wEEAgAB/wMAAf8DAAH/ATUBJwEmAf8BgQFCAUAB/wFFATkBNwH/AUsBQAE+Af8BMwEkASMB/wE2
+        ASYBJQH/ATkBKQEnAf8BOgEqASgB/wE7ASsBKQH/AToBKQEnAf8BOQEpAScB/wFCATQBMwH/AYUBRQFD
+        Af8BMAEiASAB/wExASMBIQH/AaEBmAGXAf8BRgE5ATgB/wMAAf8BHwEJAQYB/wGyAZQBkAH/AwIBA/8A
+        nQADRgF/AZkBSAFEAf8DAAH/AwAB/wEbAQsBCQH/AZ0BlAGTAf8BRAE3ATYB/wGbAZIBkQH/AYABQAE/
+        Af8BQgE2ATUB/wFCATUBNAH/AUIBNQE0Af8BQgE2ATUB/wFCATUBNAH/AUIBNQE0Af8BRwE7AToB/wGW
+        AowB/wFCATUBNAH/AUEBNgE0Af8BwgG8AbsB/wGAAUEBQAH/ARUCAAH/AasBjQGJAf8DMAFM/wClAANJ
+        AYcBmgFJAUUB/wEGAgAB/wMAAf8BiwGBAYAB/wGlAZ0BnAH/AY4BhAGDAf8BrAGlAaQB/wGRAYgBhwH/
+        AYwBggGBAf8BiwGBAYAB/wGMAYIBgQH/AYsBgQGAAf8BiwGBAYAB/wGLAYEBgAH/Aa0CpQH/AY4BhAGD
+        Af8BggFDAUEB/wEKAgAB/wEcAQYBAwH/AawBjQGJAf8DOgFg/wCtAANEAXsBqQGLAYcB/wEmAQ8BDAH/
+        AQUCAAH/AaUBnQGcAf8BtAGtAawB/wGlAZwBmwH/AboBtAGzAf8BqAGgAZ8B/wGgAZcBlgH/AaEBmAGX
+        Af8BoQGYAZcB/wGgAZcBlgH/AaEBmAGXAf8BxQHAAb8B/wHIAcMBwgH/AQ0CAAH/AT4BJQEiAf8BsQGT
+        AY8B/wMzAVL/ALUAAykBPwNTAagBkwFDAUAB/wEmAREBDgH/AZABhgGEAf8ByAHDAcIB/wHEAb8BvgH/
+        AckBxAHDAf8BwQG9AbwB/wG2AbABrwH/AbUBrwGuAf8BtgGwAa8B/wGjAZsBmgH/AYIBQgFBAf8BowGV
+        AZMB/wGjAYYBggH/A0oBjQMNARH/AMEAAy8BSgNWAbMBpgGIAYQB/wGNAUIBPgH/AZ8BkAGOAf8BuQGw
+        Aa8B/wHFAr0B/wGwAqcB/wGfAZIBkQH/AYwBRQFDAf8BjQE9AToB/wGuAZABjAH/A0wBkwMdASr/ANEA
+        AxIBGQM4AV4DTgGYA1cBtwNcAckDWwHEA1UBsgNKAYkDMAFMAwcBCf8AsQABQgFNAT4HAAE+AwABKAMA
+        AYADAAEgAwABAQEAAQEGAAECFgAD/wEAAv8B4AEHDAAB/wGAAQABAQwAAf8PAAH/DwAB/A8AAfgPAAHw
+        DwAB4A8AAcAPAAHADwABgA8AAYCiAAEBDAABgAIAAQcMAAGAAgABBwwAAcACAAEPDAABwAIAAQ8MAAHg
+        AgABHwwAAfACAAE/DAAB+AIAAX8MAAH8AgAB/wwAAf8BAAEDAf8MAAH/AcABDwH/DAAL
 </value>
   </data>
+  <metadata name="contextMenuStripRefresh.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>139, 22</value>
+  </metadata>
 </root>
