- Added code to let users drag&drop columns on the target grid to exchange or move mappings, also fixed code to do a better handling of the unmapping of columns by dragging a column out of the source grid. (Forms\AppendDataForm.cs, Forms\AppendDataForm.Designer.cs, Forms\AppendDataForm.resx) - Added a string message for the mappings exchange. (Properties\Resources.Designer.cs, Properties\Resources.resx)

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -398,4 +398,7 @@ Please add a primary key to the table.</value>
   <data name="ConnectFailedTryNewPassword" xml:space="preserve">
     <value>Connection attempt failed.  Please re-enter your password to try again.</value>
   </data>
+  <data name="ColumnMappedExchangeDetailWarning" xml:space="preserve">
+    <value>This column has already been mapped, do you want to exchange mappings on the two columns?</value>
+  </data>
 </root>
