--- a/source/Forms/AppendDataForm.resx
+++ b/source/Forms/AppendDataForm.resx
@@ -120,6 +120,132 @@
   <metadata name="contextMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABEAAAALCAYAAACZIGYHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAADJGlUWHRYTUw6Y29tLmFkb2Jl
+        LnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhpSHpyZVN6TlRjemtjOWQi
+        Pz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iQWRvYmUgWE1QIENv
+        cmUgNS4zLWMwMTEgNjYuMTQ1NjYxLCAyMDEyLzAyLzA2LTE0OjU2OjI3ICAgICAgICAiPiA8cmRmOlJE
+        RiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPiA8
+        cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6Ly9ucy5hZG9iZS5jb20v
+        eGFwLzEuMC8iIHhtbG5zOnhtcE1NPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAvbW0vIiB4bWxu
+        czpzdFJlZj0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL3NUeXBlL1Jlc291cmNlUmVmIyIgeG1w
+        OkNyZWF0b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgQ1M2IChNYWNpbnRvc2gpIiB4bXBNTTpJbnN0YW5j
+        ZUlEPSJ4bXAuaWlkOjJDQzQzQ0Y5QkM5NjExRTE5NkJDQzk4NzBEMUU1NjkwIiB4bXBNTTpEb2N1bWVu
+        dElEPSJ4bXAuZGlkOjJDQzQzQ0ZBQkM5NjExRTE5NkJDQzk4NzBEMUU1NjkwIj4gPHhtcE1NOkRlcml2
+        ZWRGcm9tIHN0UmVmOmluc3RhbmNlSUQ9InhtcC5paWQ6MkNDNDNDRjdCQzk2MTFFMTk2QkNDOTg3MEQx
+        RTU2OTAiIHN0UmVmOmRvY3VtZW50SUQ9InhtcC5kaWQ6MkNDNDNDRjhCQzk2MTFFMTk2QkNDOTg3MEQx
+        RTU2OTAiLz4gPC9yZGY6RGVzY3JpcHRpb24+IDwvcmRmOlJERj4gPC94OnhtcG1ldGE+IDw/eHBhY2tl
+        dCBlbmQ9InIiPz45spFIAAABCklEQVQoU42S2Q7BQBSGh3sXvIVncuUlJCIRsUeQ1BJb6oIQe2gVUSQa
+        Syx9Di8hOc6QSYpOuThpJz3zzX++DgEAEs9U3eFk0UPf/6lMoWELxfO+lFB30H6SLTbdkVTpFowJd4R5
+        f0EoAPtF7IdEtrYTym0H6ck7ZTg7QrOvAjZYgigADxJzlQ50JQ0Gyp6Wj8jqxYWlT5ZnaA03XJARQA+V
+        1AvgPhGf9qcDXDjlFR9kBpiuriLusz+dMAdmIJTn9YfStig6oCOwBEbAG4SXCOVtrQBfkE/QQDlAZ6LB
+        aP5y8JmATWF6L9hoEsoeL06WANMkRkfK+qrPNjo3gWUS9hHjOxESYH+BdxEfBZYMBWEeWC0AAAAASUVO
+        RK5CYII=
+</value>
+  </data>
+  <data name="picChooseColumnMapping.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAADJGlUWHRYTUw6Y29tLmFkb2Jl
+        LnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhpSHpyZVN6TlRjemtjOWQi
+        Pz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iQWRvYmUgWE1QIENv
+        cmUgNS4zLWMwMTEgNjYuMTQ1NjYxLCAyMDEyLzAyLzA2LTE0OjU2OjI3ICAgICAgICAiPiA8cmRmOlJE
+        RiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPiA8
+        cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6Ly9ucy5hZG9iZS5jb20v
+        eGFwLzEuMC8iIHhtbG5zOnhtcE1NPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAvbW0vIiB4bWxu
+        czpzdFJlZj0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL3NUeXBlL1Jlc291cmNlUmVmIyIgeG1w
+        OkNyZWF0b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgQ1M2IChNYWNpbnRvc2gpIiB4bXBNTTpJbnN0YW5j
+        ZUlEPSJ4bXAuaWlkOjQwNTlDRDg1QkM3RTExRTE5NzY5RENGMTU1MkFENDJBIiB4bXBNTTpEb2N1bWVu
+        dElEPSJ4bXAuZGlkOjQwNTlDRDg2QkM3RTExRTE5NzY5RENGMTU1MkFENDJBIj4gPHhtcE1NOkRlcml2
+        ZWRGcm9tIHN0UmVmOmluc3RhbmNlSUQ9InhtcC5paWQ6OEQzQjk1QkVCQzc1MTFFMTk3NjlEQ0YxNTUy
+        QUQ0MkEiIHN0UmVmOmRvY3VtZW50SUQ9InhtcC5kaWQ6NDA1OUNEODRCQzdFMTFFMTk3NjlEQ0YxNTUy
+        QUQ0MkEiLz4gPC9yZGY6RGVzY3JpcHRpb24+IDwvcmRmOlJERj4gPC94OnhtcG1ldGE+IDw/eHBhY2tl
+        dCBlbmQ9InIiPz4dLHipAAAGtklEQVRYR61Wa2xT5xn+MGG9aj82tauqXvixhlaCJoTe1B8dbJQyFUQ7
+        lQHSOk0T2tr1x1QE9AItKxO0TegIIYFcOlgJhJvJ2qRJTG6YJBAnIeTuEMe5+DixnYtjOzefY5/jZ+/3
+        kSAnCxk97EiPXp/3u7zP8z3vZx0GgE1jx44dmAeMxjjuak50Pf77VnH+MrX5dKHoyItGE7jjOYwxQ/Ta
+        OyGA9evXIz4+XsQoxTNOYN26dYiLiwOP881JeDZhxpz/RUAUoeeoVs4iPEaxn6GaxtLZqTfpDFn6fHMk
+        1jZjzrwEpgdp0wyYGV+YIXxibCVhDyGV5wRWLS5g2RtUnpu9afQ+Tma9tc9c82b0wGwC9yxiWVRgE3tj
+        SRlLXesVBXNINcepNzT2/ostNP7b/1LF2FrKf76FvVXQw5rnJzknK1IVKmXq1tdZAVvA2tmqJyPs4Qck
+        2tQ6hVaKtYTPCD+L3oMT2sn+ermZXR1zsFYti6XMSfKW2NsQ2JK3n7VRH2jcitng5JznmXfX26yMCm6M
+        OjlDDIvJ7GEt2ttsc5GBGbhdm2eTnEH4NgQepUVbeBMKxb9czH3k6oX/BgPLeHcDK+JEFhpYJuUWzPZ9
+        qvit/G37ZA7/eNNFPxnC85vFp58FnMR0o86eP914sze6oyacWvQMxVcJn7L7YkyCQIyhULxP5X+0iBVy
+        Aj9+gJmi8w+yB02cwCK2KHo+32/uhr/NCayOf6kSP1n6FgyZN7uex5/GbkTcC6VY+vR6DOfdI3qDx+fj
+        fo2lK/KR8NCf0WyoAyfA4zMP/xGvbW7kp7f6BxN4fUs3nnslC4+8sgkLj/4Gj6zcJN6n8xvWrEF/7v1Y
+        t/q1GflXH9+G+hgL1j62XeR/t61PH4EPUvxIPRHAezuMeHnNH/DeTiNSswM4TEg9GcBfKP+rNb/HO9uN
+        OPRNAMkEHt/ZfgErf7EVf9pmxJf/9GP31359BNKrQ+TOzScUCiESAVQNCBOUMCCHIgiMKxiXKQYj8E1E
+        MEwYGovA6ZXR59fQ4VGRcilwdwRMtW4UX/OgiGL/sCyKWx2jyLe4kVftxsX6QXinChurPDhb4UKO2YVa
+        +zhaXWEcKvXpI3DkqgISjcBEGP7xMEbGwkLtJCn3Tahwj4TQJxDGIKn2jEbQ6VFww6WgtZ+iJ4wmZxgH
+        Lw7rI5BWFaQjj8BY4ST04dzlPvR4JjBGJOrtfpwsc+JEqRMXrrjhDmjiyP9V4kRGkYSjhRLM1jFcd4Tw
+        j8IBfQRSKyYQUsnX0RCGRsPw+BShnPvt8YfROxRC90AI9gEFfT4NjhENLU4ZTZKCeodC6hXU9YRwIN+l
+        j8Bh85hotHNmCWfNTpwud8LWP4ER8tvS4RdqjxVLOEOe93o1dA1ryDQ5kfa9hJR8B4qbR1HdpSDxW6c+
+        AinlAUwoGtyk3OUjr70KBkZV0eWSN4wON/lMsJLfXUMabIMa6ntl1HbLVFgm9QqqOhV8caFXH4HkkhHy
+        W0NOuST8zia/W6UJ8juCSqsPWSZJ+J19yYWOAQ1WunJHCiQkfyfhq28d+L5hFGabjM/PdekjcNA0BP+k
+        BuewAgf3e1CBkzqeN1sned9CHjcTGslvq1tFi0vFVXsQlVTU3CEL9eU3gth32qaPwFcFHnjHNep06abf
+        FyU0dI+LZitt9gm13O9jpS4096to7FNxKE9CUq6EL3MdyK0LoMQaxN9PtusjkJTfT/dbg53uNr/f7S4Z
+        9sGwaLbW/hD5zbtcRg153uBUcU1ScYkUl7UHUdxG8YYMU0sQe0+06iOQ+G9J3G+uPIvA/bZ0jotmK2rw
+        ISXPgWRSnHHRhTqHippeFQdozX6jA/vOO3DGEkBB0yT+drxJH4EvjD10v1Xqcln8szVJMtror5U323Xy
+        vdrOfZZRQZ5belRc6Q6juHUSRaS6oDmIojYZeY2T2PP1dX0E9p3pRNeAjPR8O9LybEj9rhPlLSNokILI
+        rR7EAaMNiedtOJzfi8u2SZS3T2L/OTs+y+nAnlM2fFMxjNxro/gk85o+Arx5GrsDKKvvQ6GlB4U1Dphb
+        hlDR7oPp+gAuVPbi7OVuGK/QeMMI8uu9OEV/WMdLunGspBc5VQM4fXUEu9Nr9BHYm92GPccbsTurFh+l
+        V2NXugW7M+uEol0ZNfgorQofHq6geAW7jljw8ZFqfJhSgZ0HL2Fnspl+V+LjNFpHY3q+iJYtfvq5RIHY
+        FUmLYxOSnuRYsiJRIJbw1PIkgdgEep/Cz5cnPSEQn/TEU8sTp0EElv3QTzI+/97/I8S37lxfxf8B1ZKY
+        KmhgCL8AAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="picManuallyAdjustMapping.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAZdEVYdFNvZnR3YXJlAEFkb2JlIEltYWdlUmVhZHlxyWU8AAADJGlUWHRYTUw6Y29tLmFkb2Jl
+        LnhtcAAAAAAAPD94cGFja2V0IGJlZ2luPSLvu78iIGlkPSJXNU0wTXBDZWhpSHpyZVN6TlRjemtjOWQi
+        Pz4gPHg6eG1wbWV0YSB4bWxuczp4PSJhZG9iZTpuczptZXRhLyIgeDp4bXB0az0iQWRvYmUgWE1QIENv
+        cmUgNS4zLWMwMTEgNjYuMTQ1NjYxLCAyMDEyLzAyLzA2LTE0OjU2OjI3ICAgICAgICAiPiA8cmRmOlJE
+        RiB4bWxuczpyZGY9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkvMDIvMjItcmRmLXN5bnRheC1ucyMiPiA8
+        cmRmOkRlc2NyaXB0aW9uIHJkZjphYm91dD0iIiB4bWxuczp4bXA9Imh0dHA6Ly9ucy5hZG9iZS5jb20v
+        eGFwLzEuMC8iIHhtbG5zOnhtcE1NPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAvbW0vIiB4bWxu
+        czpzdFJlZj0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL3NUeXBlL1Jlc291cmNlUmVmIyIgeG1w
+        OkNyZWF0b3JUb29sPSJBZG9iZSBQaG90b3Nob3AgQ1M2IChNYWNpbnRvc2gpIiB4bXBNTTpJbnN0YW5j
+        ZUlEPSJ4bXAuaWlkOjQwNTlDRDg5QkM3RTExRTE5NzY5RENGMTU1MkFENDJBIiB4bXBNTTpEb2N1bWVu
+        dElEPSJ4bXAuZGlkOjQwNTlDRDhBQkM3RTExRTE5NzY5RENGMTU1MkFENDJBIj4gPHhtcE1NOkRlcml2
+        ZWRGcm9tIHN0UmVmOmluc3RhbmNlSUQ9InhtcC5paWQ6NDA1OUNEODdCQzdFMTFFMTk3NjlEQ0YxNTUy
+        QUQ0MkEiIHN0UmVmOmRvY3VtZW50SUQ9InhtcC5kaWQ6NDA1OUNEODhCQzdFMTFFMTk3NjlEQ0YxNTUy
+        QUQ0MkEiLz4gPC9yZGY6RGVzY3JpcHRpb24+IDwvcmRmOlJERj4gPC94OnhtcG1ldGE+IDw/eHBhY2tl
+        dCBlbmQ9InIiPz5S7UumAAAHH0lEQVRYR61Va3BU5Rn+XILayvRHHa0gJfyABdpoQiLqqIAoBixJwYoG
+        OrXDKDNVmU6njsQLWKqO1CZ2jCGJuXRACSCXJY4bQxZyW7IJ2RBCQjYXciG7ezbZ3Vw2m81tr2efvt9h
+        N7MJIV3Snpln3nPe7/I+7/c83y4DwILYu3cvZgGjMY7/eU5ozcniPBnYPFgoNPKioQTCnsMYk01f+98I
+        IDExETExMVIM6XjKCSQkJCA6Oho8zjYn9tHYW+bMRkAqQs/XYjnz8xjCfkrXNJbNjr8EHmebI7CWW+bc
+        lkBwgDbNgZrxhTk8R8+zhAOEDJ6TsGFpEcvf6uO50A2nbE7zTKx1cp+Z5k3xwHQC98xneVQgiW1bUcYy
+        Ntukgieoa47j20T21yd0NP7q9I0pt5nwj51se5GeNc1OckZW1JWnlPl2b2FF7C7WxjZE+tmD9wm0aWsA
+        zRQvEz4m/GJa168ms79cbGKXRo2sWcxj6TOSnGz2NgR2Kg+yFvKByKWYDk7OdIbZ9r3GyojAKyEnJ4tg
+        Ebl6phNfYzuKZUzG5doxnWQ4HlhEi3ZyE0odP7eU68i7l/SXyVjOW1tZMScyT8ZyKXdXqHxc90Dxyfxt
+        fTKDftx0oU+OpDkVXrO2hXHwgpxE0KjBfGBs0niB78m9wjJhYPYqii8Q/sZ+EqGSCETIzknfgfzd89k5
+        TuBn9zFVaH4BW6DiJzCfzQ+dv2rhwuUsiFklCBDYGPOkBj+P2g5Z7k3X83i//BVEP16KqJWJGFTeI3mD
+        xzXRLyIqrhCxD/wJTbI6JN7/MmrnabDqwdexaUcjP72Nd0xgy85uPLYuDw+tS8K8r3+Hh55Nkr6D+a3x
+        8egt+CkSNm6akn/hl+9g5cI4REVuQNwzmfjDOz1zI/Be+jAyjjqwZ68CT8Xvwp5kBTLyHThEyDjmwNuU
+        fz7+j3jzXQW++taBNAKPb757FnL5GpSUabH2+TfwXpZ5bgSyazwk1c3H4/HA7wd8IuAluL2Ay+OHY8yN
+        MRdFpx/2cT8GCQOjfqxb/xtpXV29DusTXkdExN2JdyxBkIDqsgUXrlhRTLF30CUVbzWOoFBrgbLGgvP1
+        /bAFCiuqrDhVacaaJzdPkq+obsTixfI6IrDgjkyYdckNahqOcS+Gx7wYGvVK3U5Q5/ZxHyxDHvRI8KKf
+        uraO+NFpdeO62Y2n122ZJMBfSksrDEuW/EoVJBHWLcisctKR+6GoNBF6cPpiD/TWcYwSifquYRwrM+Fo
+        qQlnqy2wOET0DIv4psSEnGIBsU9smkKAf2g0Nc1BEmERyKgch8dHuo54MDDihdXuljrneluHvTAMeNDd
+        50FXnxs9dhHGIRE6kwvXBDeeWjv1BIJs1GpNU2Tkr78Pi8Ah9ahktNNqAafUJnxXbkJH7ziGSG9t+7DU
+        7eELAk6S5gabiBuDInJVJmT+SCfw+M0T6Ou3SXH37j2GRYvkIw8/vEK/ePFKdVgE0ssdGHeLsFDnZjtp
+        bXOjb8QnuVywedFuIb0Jrb1u3BgQ0dEvot7gwuVuF6IefRrPxW/H799IxhmlGoODNnHZsug28sA8bsSw
+        CKSVDJHeIk6UC5Le+aR3szBOevuhabUjTyVIeudXmNHeJ6LV6kNWkYC0HwRs2/URviluQ/n1CayP3wG9
+        3oCkpF16Kv7bsAl8qRrA8IQI06AbRq53vxsmcjw3WydprzO50URoNNIpWHzQmX241OWEpsMFdbsLVZ1u
+        IuDEnz9XIjb2GYEM+CkVvzdsAv8qssI2JpLThZt6nxfQ0D0mma20yS51y/U+XGpGU68PjT0+fKUUkFog
+        4J8FRhTUOVDS6sSnx9rm9kuYWthL91tEF91tfr/bzC509XslszX3ekhvN+r0LtSS5g0mH64IPlRQx2Vt
+        TlxooXjdBZXOiU+ONksE+J9cqPbB91uSwX/DlO8F6X7zzvMIXG9t55hktuIGO9KVRqRRxznnzagz+lBr
+        8OELWnNQYcRnZ4w4qXWg6NoE/n7k2twIfK7Q0/32kctd1LGb7rcLLWavZLarpHtNF9fZhUrSXKv3obrb
+        iwvNEyimrouanChucUHZOIED/746NwKfnezEjT4Xsgu7kKnsQMYPnSjXDaFBcKKgph9fKDqQcqYDhwoN
+        uNgxgfK2CRw83YWPT7TjwPEOfFs5iIIrI/go98rcCHDzNHY7UFbfg3NaPc7VGqHWDaCyzQ7V1T6c1Rhw
+        6mI3FNU03jCEwnobjtMP1pGSbhwuMeBEVR++uzSE/dm1cyPwSX4LDhxpxP68y/gguwb7srXYn1sndbQv
+        pxYfZFbh/UOVFKuxL0uLD7Nq8H56JZK/rEBympreNfgwk9bR2FxM+MjSlY+lSJDHpS6Vx6ZGcqyIS5Eg
+        JyxfnSpBHkvfASxbnbpEQkzqkuWrU4IgAo/c6S3g8+/9P0K6XDNdw/8AyYFqOBg0d18AAAAASUVORK5C
+        YII=
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>47</value>
   </metadata>
