--- a/source/Panels/SchemaSelectionPanel.resx
+++ b/source/Panels/SchemaSelectionPanel.resx
@@ -124,62 +124,64 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAA+
-        DAAAAk1TRnQBSQFMAwEBAAH4AQAB+AEAARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
-        ARgDAAEBAQABIAYAASQ2AAMBBAIEAwEEAwUBBwMFAQcDBAEFAwMBBAMDAQQDAQEC/wBRAAMBAQIDBgEI
-        AwoEDgETAxEBFwMUARsDFgEfAxUBHgMUARsDEQEXAw4BEwMLAQ8DBwEJAwIBA/8ARQADBAEFAxUBHQEm
-        AigBPAE4AUkBTwFuATwBYAFrAZYBOgFuAX4BsAExAXsBkgHOASsBfAGXAdgBNQFvAYIBugE4AWYBdAGo
-        ATgBUAFXAX8BMgE7AT4BXwIjASQBNwMcASkDDwEUAwYBCAMBAQL/ADkAAwUBBwEyAT4BQQFYATMBmQG3
-        AeIBOAGkAcUB/wFnAbYBzgH/AY4ByQHcAf8BlwHQAeIB/wGHAcsB4AH/AXMBxwHdAf8BYgHCAdsB/wFN
-        AbkB1wH/ATIBpAHFAf8BHAGMAbEB/wEYAYIBqgH6ATYBWQFlAaIBJgIoAT0DFAEbAwYBCP8AOQABOwFW
-        AV0BcgE0Aa4B0AH/AYcB1gHrAf8B2AH4Av8B9QP/Ae8B/QL/Ad4B+QL/AcgB9AL/Aa4B8AH+Af8BlQHq
-        Af0B/wF8AeYB/QH/AWkB5AH9Af8BZQHjAv8BfgHaAfIB/wFXAakBxwH/AScBbwGIAdABKQErASwBQwMJ
-        AQz/ADkAASwBqAHLAfkBgAHeAfcB/wGyAfIC/wHSAfUC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHy
-        Af0B/wGrAe4B/AH/AZIB6AH7Af8BeQHjAfsB/wFlAd8B+gH/AV4B3QH6Af8BmAHsAv8BvQHwAf4B/wE9
-        AbEB2wH/ATQBQAFFAYMDBgEI/wA5AAE7AbAB0QH5AZAB6gL/AawB7gL/AdIB9QL/AewB+wL/AekB+gH+
-        Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wF5AeMB+wH/AWUB3wH6Af8BXgHdAfoB/wGS
-        AegB/AH/AcQB9wL/AU8BwQHsAf8BNAE/AUUBgwMGAQj/ADkAATsBrwHQAfcBjQHoAv8BrAHuAv8B0gH1
-        Av8B7AH7Av8B6QH6Af4B/wHdAfkC/wHIAfQC/wGuAfAB/gH/AZUB6gH9Af8BegHkAfwB/wFlAd8B+gH/
-        AV4B3QH6Af8BkgHoAfwB/wHCAfUC/wFNAcEB6wH/ATQBPwFFAYIDBgEI/wA5AAE8AbAB0QH3AY0B6AL/
-        Aa4B7wL/Ad0B+wb/AfwD/wHXAfUB/AH/AbcB6gH3Af8BoQHnAfcB/wGJAeIB9gH/AX4B6AL/AW8B6QL/
-        AWUB5QL/AZYB7AL/AcIB9QL/AU0BwQHsAf8BNAE/AUUBgQMFAQf/ADkAATgBsAHRAfoBlQHuAv8BpQHq
-        AfwB/wGDAc0B4QH/AVkBswHOAf8BQQGmAcMB/wFGAagBxAH/AUkBqQHGAf8BQAGmAcQB/wEyAZ8BvgH/
-        AR8BkQG0Af8BHAGRAbUB/wEpAaMBxgH/AXkB0QHoAf8BzgH+Av8BUgHEAe4B/wE0AT8BRAF/AwIBA/8A
-        OQABNwGXAbEB2AFGAboB2gH/AUMBswHRAf8BdwHHAd4B/wGqAdsB6QH/AbIB3gHqAf8BrAHeAewB/wGg
-        Ad0B7QH/AYwB2QHrAf8BdQHSAekB/wFbAccB4wH/AUoBwwHgAf8BOQGzAdMB/wEzAZ0BvgH/ATkBlwG2
-        Af8BKwGgAckB/gE0ATwBQAFtAwMBBP8AOQABOQGRAagBywFMAb4B3QH/AZkB4wH2Af8BywHyAfwB/wHw
-        Af0C/wHyA/8B4QH7Av8ByQH1Av8BsAHxAv8BlgHrAf4B/wF9AecB/gH/AWgB4wH9Af8BXQHcAfkB/wGH
-        AeAB9QH/AXkBwQHZAf8BGwGTAbsB+QEzATsBPgFpAwcBCf8AOQABOQGvAc4B8wGIAeQB/QH/Aa4B7wL/
-        AdMB9gL/AewB+wL/AekB+gH+Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wF5AeMB+wH/
-        AWUB3wH6Af8BXgHdAfoB/wGVAeoB/QH/AcAB8wL/AUYBuwHmAf8BNAFAAUQBgAMGAQj/ADkAAUEBuAHY
-        AfcBjQHoAv8BrAHuAv8B0gH1Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGS
-        AegB+wH/AXkB4wH7Af8BZQHfAfoB/wFeAd0B+gH/AZIB6AH8Af8BwgH1Av8BTAHDAe4B/wE0AUABRgGC
-        AwYBCP8AOQABQgG5AdkB9wGMAegC/wGsAe4C/wHUAfYC/wHxAf0C/wHwAf0C/wHhAfoC/wHKAfUC/wGw
-        AfEB/gH/AZYB6wH9Af8BfQHmAf4B/wFoAeIB/AH/AV8B3gH7Af8BkgHoAfwB/wHCAfUC/wFNAcQB7gH/
-        ATQBQAFGAYIDBgEI/wA5AAFDAboB2QH3AY4B6QL/AbIB8QL/Ac8B9AH+Af8B0QHuAfYB/wHAAecB8QH/
-        Aa8B4gHvAf8BnQHdAe4B/wGJAdkB7AH/AXQB0wHqAf8BXgHOAeoB/wFQAc0B6gH/AVYB1gH0Af8BlwHs
-        Av8ByQH5Av8BTQHEAe8B/wE0AUABRgGCAwYBCP8AOQABRAG8AdsB9wGEAeQB/AH/AYMB2QHwAf8BkAHY
-        AesB/wGEAdAB5AH/AXYBygHhAf8BbQHFAd0B/wFpAcIB3AH/AWcBwAHaAf8BYgG9AdgB/wFVAbkB1wH/
-        AUwBtgHWAf8BRAG5AdoB/wFlAcYB4AH/AZ8B3wHwAf8BTwHGAfAB/wE0AUEBRgGCAwYBCP8AOQABPgG4
-        AdgB9wFlAc8B6wH/AXgB0AHoAf8BiAHWAe0B/wGpAeYB+AH/Ab8B8QL/AcMB8wL/AcIB8wL/AbsB8AL/
-        AbMB7gL/AaoB6wL/AZUB4gH9Af8BbQHLAesB/wFbAboB2gH/AWEBuwHbAf8BMAGuAdkB/wE0AUIBRwGC
-        AwYBCP8AOQABRAG5AdcB+QGZAd8B8gH/AcIB8QL/AcAB8QL/AbsB7gH+Af8BuQHtAf0B/wG3Ae0B/QH/
-        AbAB6wH9Af8BqAHoAf0B/wGeAeQB/QH/AZEB4QH9Af8BjQHgAf4B/wGWAeQC/wGpAewC/wGlAeQB+AH/
-        AU4BuQHdAf8BNQFCAUYBgAMCAQP/ADkAAUYBvwHfAf8BxgHyAv8BugHuAf0B/wG4Ae0B/QH/AbkB7QH9
-        Af8BuAHtAf0B/wGxAesB/QH/AagB6AH9Af8BnQHkAf0B/wGUAeEB/QH/AZIB4QH+Af8BnAHiAf4B/wGp
-        AecB/gH/AbcB6wL/AdkB/AL/AYQB1gHyAf8BNAE/AUMBev8APQABQAFjAWsBfwFrAcwB5gH/AbQB6wH7
-        Af8BwQHxAv8BuwHuAf4B/wGzAewB/gH/AakB6AH9Af8BngHlAf0B/wGVAeEB/QH/AZQB4gH+Af8BnQHk
-        Av8BqQHnAv8BvAHuAv8BywHyAv8BmAHSAecB/wFDAYwBowHIARkCGgEk/wA9AAMEAQYBMgFAAUQBUQFF
-        AbIBzwHvAWQByAHjAf8BiAHXAe4B/wGRAd0B9AH/AZQB3wH4Af8BlQHiAf4B/wGUAeIC/wGSAeAB/QH/
-        AYcB1wHzAf8BhAHSAewB/wFqAcAB3AH/AUIBrgHRAf8BPQFqAXgBmgIRARIBF/8ASQADDgESARYCGAEe
-        AToBUAFWAWcBQgF+AY4BqwE8AZEBpwHMATYBmgG2AeABNAGaAbYB4wE3AZMBrQHWAT0BgAGUAbgBPgFp
-        AXQBjAEkASgBKgE1AQ8CEAEVAwYBCP8A/wC2AAFCAU0BPgcAAT4DAAEoAwABYAMAARgDAAEBAQABAQUA
-        ASABARYAA/8BAAH/AYABPwkAAfwBAAEPCQAB+AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHw
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAe
+        DAAAAk1TRnQBSQFMAwECAAEBAQABAQEYAQABGAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAWADAAEY
+        AwABAQEAASAGAAEkNgADAQQCBAMBBAMFAQcDBQEHAwQBBQMDAQQDAwEEAwEBAv8AUQADAQECAwYBCAMK
+        BA4BEwMRARcDFAEbAxYBHwMWAR4DFAEbAxEBFwMOARMDCwEPAwcBCQMCAQP/AEUAAwQBBQMVAR0DKAE8
+        AT4BQQFCAW4BRwFUAVgBlgFHAWEBaQGwAUEBcQGAAc4BOQFzAYcB2AFFAWQBbwG6AUcBWwFhAagBQgFI
+        AUoBfwE4AjkBXwMlATcDHQEpAw8BFAMGAQgDAQEC/wA5AAMFAQcBNQI3AVgBPAGOAaQB4gE3AaQBxQH/
+        AWYBtgHOAf8BjgHJAdwB/wGXAdAB4gH/AYcBywHgAf8BcgHHAd0B/wFhAcIB2wH/AUwBuQHXAf8BMQGk
+        AcUB/wEbAYwBsQH/ARsBfwGnAfoBRgFVAVkBogMoAT0DFAEbAwYBCP8AOQABQAFFAUcBcgEzAa4B0AH/
+        AYcB1gHrAf8B2AH4Av8B9QP/Ae8B/QL/Ad4B+QL/AcgB9AL/Aa4B8AH+Af8BlQHqAf0B/wF7AeYB/QH/
+        AWgB5AH9Af8BZAHjAv8BfQHaAfIB/wFWAakBxwH/ATkBagF6AdACKwEsAUMDCQEM/wA5AAEuAaQBxQH5
+        AYAB3gH3Af8BsgHyAv8B0gH1Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGS
+        AegB+wH/AXgB4wH7Af8BZAHfAfoB/wFdAd0B+gH/AZgB7AL/Ab0B8AH+Af8BPAGxAdsB/wFDAUYBRwGD
+        AwYBCP8AOQABPQGtAcsB+QGQAeoC/wGsAe4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHy
+        Af0B/wGrAe4B/AH/AZIB6AH7Af8BeAHjAfsB/wFkAd8B+gH/AV0B3QH6Af8BkgHoAfwB/wHEAfcC/wFO
+        AcEB7AH/AUMBRQFHAYMDBgEI/wA5AAE8AasByQH3AY0B6AL/AawB7gL/AdIB9QL/AewB+wL/AekB+gH+
+        Af8B3QH5Av8ByAH0Av8BrgHwAf4B/wGVAeoB/QH/AXkB5AH8Af8BZAHfAfoB/wFdAd0B+gH/AZIB6AH8
+        Af8BwgH1Av8BTAHBAesB/wFCAUUBRgGCAwYBCP8AOQABPQGrAckB9wGNAegC/wGuAe8C/wHdAfsG/wH8
+        A/8B1wH1AfwB/wG3AeoB9wH/AaEB5wH3Af8BiQHiAfYB/wF9AegC/wFuAekC/wFkAeUC/wGWAewC/wHC
+        AfUC/wFMAcEB7AH/AUIBRQFGAYEDBQEH/wA5AAE5Aa0BzQH6AZUB7gL/AaUB6gH8Af8BgwHNAeEB/wFY
+        AbMBzgH/AUABpgHDAf8BRQGoAcQB/wFIAakBxgH/AT8BpgHEAf8BMQGfAb4B/wEeAZEBtAH/ARsBkQG1
+        Af8BKAGjAcYB/wF4AdEB6AH/Ac4B/gL/AVEBxAHuAf8BQQFEAUUBfwMCAQP/ADkAAUIBhwGaAdgBRQG6
+        AdoB/wFCAbMB0QH/AXYBxwHeAf8BqgHbAekB/wGyAd4B6gH/AawB3gHsAf8BoAHdAe0B/wGMAdkB6wH/
+        AXQB0gHpAf8BWgHHAeMB/wFJAcMB4AH/ATgBswHTAf8BMgGdAb4B/wE4AZcBtgH/ASsBngHHAf4BPQI/
+        AW0DAwEE/wA5AAFFAX4BjQHLAUsBvgHdAf8BmQHjAfYB/wHLAfIB/AH/AfAB/QL/AfID/wHhAfsC/wHJ
+        AfUC/wGwAfEC/wGWAesB/gH/AXwB5wH+Af8BZwHjAf0B/wFcAdwB+QH/AYcB4AH1Af8BeAHBAdkB/wEd
+        AZEBtwH5ATsCPQFpAwcBCf8AOQABOwGoAcMB8wGIAeQB/QH/Aa4B7wL/AdMB9gL/AewB+wL/AekB+gH+
+        Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wF4AeMB+wH/AWQB3wH6Af8BXQHdAfoB/wGV
+        AeoB/QH/AcAB8wL/AUUBuwHmAf8BQgFFAUYBgAMGAQj/ADkAAUMBsgHQAfcBjQHoAv8BrAHuAv8B0gH1
+        Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AXgB4wH7Af8BZAHf
+        AfoB/wFdAd0B+gH/AZIB6AH8Af8BwgH1Av8BSwHDAe4B/wFCAUUBRwGCAwYBCP8AOQABRAGzAdEB9wGM
+        AegC/wGsAe4C/wHUAfYC/wHxAf0C/wHwAf0C/wHhAfoC/wHKAfUC/wGwAfEB/gH/AZYB6wH9Af8BfAHm
+        Af4B/wFnAeIB/AH/AV4B3gH7Af8BkgHoAfwB/wHCAfUC/wFMAcQB7gH/AUIBRQFHAYIDBgEI/wA5AAFF
+        AbQB0QH3AY4B6QL/AbIB8QL/Ac8B9AH+Af8B0QHuAfYB/wHAAecB8QH/Aa8B4gHvAf8BnQHdAe4B/wGJ
+        AdkB7AH/AXMB0wHqAf8BXQHOAeoB/wFPAc0B6gH/AVUB1gH0Af8BlwHsAv8ByQH5Av8BTAHEAe8B/wFC
+        AUUBRwGCAwYBCP8AOQABRgG2AdMB9wGEAeQB/AH/AYMB2QHwAf8BkAHYAesB/wGEAdAB5AH/AXUBygHh
+        Af8BbAHFAd0B/wFoAcIB3AH/AWYBwAHaAf8BYQG9AdgB/wFUAbkB1wH/AUsBtgHWAf8BQwG5AdoB/wFk
+        AcYB4AH/AZ8B3wHwAf8BTgHGAfAB/wFCAUUBRwGCAwYBCP8AOQABPwGyAdAB9wFkAc8B6wH/AXcB0AHo
+        Af8BiAHWAe0B/wGpAeYB+AH/Ab8B8QL/AcMB8wL/AcIB8wL/AbsB8AL/AbMB7gL/AaoB6wL/AZUB4gH9
+        Af8BbAHLAesB/wFaAboB2gH/AWABuwHbAf8BLwGuAdkB/wFCAUYBRwGCAwYBCP8AOQABRAG1AdIB+QGZ
+        Ad8B8gH/AcIB8QL/AcAB8QL/AbsB7gH+Af8BuQHtAf0B/wG3Ae0B/QH/AbAB6wH9Af8BqAHoAf0B/wGe
+        AeQB/QH/AZEB4QH9Af8BjQHgAf4B/wGWAeQC/wGpAewC/wGlAeQB+AH/AU0BuQHdAf8BQgFFAUYBgAMC
+        AQP/ADkAAUUBvwHfAf8BxgHyAv8BugHuAf0B/wG4Ae0B/QH/AbkB7QH9Af8BuAHtAf0B/wGxAesB/QH/
+        AagB6AH9Af8BnQHkAf0B/wGUAeEB/QH/AZIB4QH+Af8BnAHiAf4B/wGpAecB/gH/AbcB6wL/AdkB/AL/
+        AYQB1gHyAf8BQAFDAUQBev8APQABRAFNAU8BfwFqAcwB5gH/AbQB6wH7Af8BwQHxAv8BuwHuAf4B/wGz
+        AewB/gH/AakB6AH9Af8BngHlAf0B/wGVAeEB/QH/AZQB4gH+Af8BnQHkAv8BqQHnAv8BvAHuAv8BywHy
+        Av8BmAHSAecB/wFNAXoBiAHIAxoBJP8APQADBAEGATICNAFRAUgBqAHBAe8BYwHIAeMB/wGIAdcB7gH/
+        AZEB3QH0Af8BlAHfAfgB/wGVAeIB/gH/AZQB4gL/AZIB4AH9Af8BhwHXAfMB/wGEAdIB7AH/AWkBwAHc
+        Af8BQQGuAdEB/wFIAVkBXgGaAxEBF/8ASQADDQESAxYBHgE8AT8BQQFnAUwBZwFuAasBRwF+AY0BzAE/
+        AYwBowHgATwBjQGkAeMBQgGEAZUB1gFJAW0BeAG4AUYBVAFXAYwDJAE1AxABFQMGAQj/AP8AtgABQgFN
+        AT4HAAE+AwABKAMAAWADAAEYAwABAQEAAQEFAAEgAQEWAAP/AQAB/wGAAT8JAAH8AQABDwkAAfgBAAED
+        CQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHw
         AQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAED
-        CQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEHCQAB8AEAAQcJAAHw
-        AQABDwkAAfwBAAEfCQAD/wkACw==
+        CQAB8AEAAQMJAAHwAQABBwkAAfABAAEHCQAB8AEAAQ8JAAH8AQABHwkAA/8JAAs=
 </value>
   </data>
+  <metadata name="contextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>262, 19</value>
+  </metadata>
   <metadata name="labelsToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>139, 19</value>
   </metadata>
