added refresh icon to the context menus

--- a/source/Panels/SchemaSelectionPanel.resx
+++ b/source/Panels/SchemaSelectionPanel.resx
@@ -124,59 +124,59 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAe
-        DAAAAk1TRnQBSQFMAwECAAEBAQABAQEYAQABGAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAWADAAEY
-        AwABAQEAASAGAAEkNgADAQQCBAMBBAMFAQcDBQEHAwQBBQMDAQQDAwEEAwEBAv8AUQADAQECAwYBCAMK
-        BA4BEwMRARcDFAEbAxYBHwMWAR4DFAEbAxEBFwMOARMDCwEPAwcBCQMCAQP/AEUAAwQBBQMVAR0DKAE8
-        AT4BQQFCAW4BRwFUAVgBlgFHAWEBaQGwAUEBcQGAAc4BOQFzAYcB2AFFAWQBbwG6AUcBWwFhAagBQgFI
-        AUoBfwE4AjkBXwMlATcDHQEpAw8BFAMGAQgDAQEC/wA5AAMFAQcBNQI3AVgBPAGOAaQB4gE3AaQBxQH/
-        AWYBtgHOAf8BjgHJAdwB/wGXAdAB4gH/AYcBywHgAf8BcgHHAd0B/wFhAcIB2wH/AUwBuQHXAf8BMQGk
-        AcUB/wEbAYwBsQH/ARsBfwGnAfoBRgFVAVkBogMoAT0DFAEbAwYBCP8AOQABQAFFAUcBcgEzAa4B0AH/
-        AYcB1gHrAf8B2AH4Av8B9QP/Ae8B/QL/Ad4B+QL/AcgB9AL/Aa4B8AH+Af8BlQHqAf0B/wF7AeYB/QH/
-        AWgB5AH9Af8BZAHjAv8BfQHaAfIB/wFWAakBxwH/ATkBagF6AdACKwEsAUMDCQEM/wA5AAEuAaQBxQH5
-        AYAB3gH3Af8BsgHyAv8B0gH1Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGS
-        AegB+wH/AXgB4wH7Af8BZAHfAfoB/wFdAd0B+gH/AZgB7AL/Ab0B8AH+Af8BPAGxAdsB/wFDAUYBRwGD
-        AwYBCP8AOQABPQGtAcsB+QGQAeoC/wGsAe4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHy
-        Af0B/wGrAe4B/AH/AZIB6AH7Af8BeAHjAfsB/wFkAd8B+gH/AV0B3QH6Af8BkgHoAfwB/wHEAfcC/wFO
-        AcEB7AH/AUMBRQFHAYMDBgEI/wA5AAE8AasByQH3AY0B6AL/AawB7gL/AdIB9QL/AewB+wL/AekB+gH+
-        Af8B3QH5Av8ByAH0Av8BrgHwAf4B/wGVAeoB/QH/AXkB5AH8Af8BZAHfAfoB/wFdAd0B+gH/AZIB6AH8
-        Af8BwgH1Av8BTAHBAesB/wFCAUUBRgGCAwYBCP8AOQABPQGrAckB9wGNAegC/wGuAe8C/wHdAfsG/wH8
-        A/8B1wH1AfwB/wG3AeoB9wH/AaEB5wH3Af8BiQHiAfYB/wF9AegC/wFuAekC/wFkAeUC/wGWAewC/wHC
-        AfUC/wFMAcEB7AH/AUIBRQFGAYEDBQEH/wA5AAE5Aa0BzQH6AZUB7gL/AaUB6gH8Af8BgwHNAeEB/wFY
-        AbMBzgH/AUABpgHDAf8BRQGoAcQB/wFIAakBxgH/AT8BpgHEAf8BMQGfAb4B/wEeAZEBtAH/ARsBkQG1
-        Af8BKAGjAcYB/wF4AdEB6AH/Ac4B/gL/AVEBxAHuAf8BQQFEAUUBfwMCAQP/ADkAAUIBhwGaAdgBRQG6
-        AdoB/wFCAbMB0QH/AXYBxwHeAf8BqgHbAekB/wGyAd4B6gH/AawB3gHsAf8BoAHdAe0B/wGMAdkB6wH/
-        AXQB0gHpAf8BWgHHAeMB/wFJAcMB4AH/ATgBswHTAf8BMgGdAb4B/wE4AZcBtgH/ASsBngHHAf4BPQI/
-        AW0DAwEE/wA5AAFFAX4BjQHLAUsBvgHdAf8BmQHjAfYB/wHLAfIB/AH/AfAB/QL/AfID/wHhAfsC/wHJ
-        AfUC/wGwAfEC/wGWAesB/gH/AXwB5wH+Af8BZwHjAf0B/wFcAdwB+QH/AYcB4AH1Af8BeAHBAdkB/wEd
-        AZEBtwH5ATsCPQFpAwcBCf8AOQABOwGoAcMB8wGIAeQB/QH/Aa4B7wL/AdMB9gL/AewB+wL/AekB+gH+
-        Af8B2gH3Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wF4AeMB+wH/AWQB3wH6Af8BXQHdAfoB/wGV
-        AeoB/QH/AcAB8wL/AUUBuwHmAf8BQgFFAUYBgAMGAQj/ADkAAUMBsgHQAfcBjQHoAv8BrAHuAv8B0gH1
-        Av8B7AH7Av8B6QH6Af4B/wHaAfcB/gH/AcQB8gH9Af8BqwHuAfwB/wGSAegB+wH/AXgB4wH7Af8BZAHf
-        AfoB/wFdAd0B+gH/AZIB6AH8Af8BwgH1Av8BSwHDAe4B/wFCAUUBRwGCAwYBCP8AOQABRAGzAdEB9wGM
-        AegC/wGsAe4C/wHUAfYC/wHxAf0C/wHwAf0C/wHhAfoC/wHKAfUC/wGwAfEB/gH/AZYB6wH9Af8BfAHm
-        Af4B/wFnAeIB/AH/AV4B3gH7Af8BkgHoAfwB/wHCAfUC/wFMAcQB7gH/AUIBRQFHAYIDBgEI/wA5AAFF
-        AbQB0QH3AY4B6QL/AbIB8QL/Ac8B9AH+Af8B0QHuAfYB/wHAAecB8QH/Aa8B4gHvAf8BnQHdAe4B/wGJ
-        AdkB7AH/AXMB0wHqAf8BXQHOAeoB/wFPAc0B6gH/AVUB1gH0Af8BlwHsAv8ByQH5Av8BTAHEAe8B/wFC
-        AUUBRwGCAwYBCP8AOQABRgG2AdMB9wGEAeQB/AH/AYMB2QHwAf8BkAHYAesB/wGEAdAB5AH/AXUBygHh
-        Af8BbAHFAd0B/wFoAcIB3AH/AWYBwAHaAf8BYQG9AdgB/wFUAbkB1wH/AUsBtgHWAf8BQwG5AdoB/wFk
-        AcYB4AH/AZ8B3wHwAf8BTgHGAfAB/wFCAUUBRwGCAwYBCP8AOQABPwGyAdAB9wFkAc8B6wH/AXcB0AHo
-        Af8BiAHWAe0B/wGpAeYB+AH/Ab8B8QL/AcMB8wL/AcIB8wL/AbsB8AL/AbMB7gL/AaoB6wL/AZUB4gH9
-        Af8BbAHLAesB/wFaAboB2gH/AWABuwHbAf8BLwGuAdkB/wFCAUYBRwGCAwYBCP8AOQABRAG1AdIB+QGZ
-        Ad8B8gH/AcIB8QL/AcAB8QL/AbsB7gH+Af8BuQHtAf0B/wG3Ae0B/QH/AbAB6wH9Af8BqAHoAf0B/wGe
-        AeQB/QH/AZEB4QH9Af8BjQHgAf4B/wGWAeQC/wGpAewC/wGlAeQB+AH/AU0BuQHdAf8BQgFFAUYBgAMC
-        AQP/ADkAAUUBvwHfAf8BxgHyAv8BugHuAf0B/wG4Ae0B/QH/AbkB7QH9Af8BuAHtAf0B/wGxAesB/QH/
-        AagB6AH9Af8BnQHkAf0B/wGUAeEB/QH/AZIB4QH+Af8BnAHiAf4B/wGpAecB/gH/AbcB6wL/AdkB/AL/
-        AYQB1gHyAf8BQAFDAUQBev8APQABRAFNAU8BfwFqAcwB5gH/AbQB6wH7Af8BwQHxAv8BuwHuAf4B/wGz
-        AewB/gH/AakB6AH9Af8BngHlAf0B/wGVAeEB/QH/AZQB4gH+Af8BnQHkAv8BqQHnAv8BvAHuAv8BywHy
-        Av8BmAHSAecB/wFNAXoBiAHIAxoBJP8APQADBAEGATICNAFRAUgBqAHBAe8BYwHIAeMB/wGIAdcB7gH/
-        AZEB3QH0Af8BlAHfAfgB/wGVAeIB/gH/AZQB4gL/AZIB4AH9Af8BhwHXAfMB/wGEAdIB7AH/AWkBwAHc
-        Af8BQQGuAdEB/wFIAVkBXgGaAxEBF/8ASQADDQESAxYBHgE8AT8BQQFnAUwBZwFuAasBRwF+AY0BzAE/
-        AYwBowHgATwBjQGkAeMBQgGEAZUB1gFJAW0BeAG4AUYBVAFXAYwDJAE1AxABFQMGAQj/AP8AtgABQgFN
-        AT4HAAE+AwABKAMAAWADAAEYAwABAQEAAQEFAAEgAQEWAAP/AQAB/wGAAT8JAAH8AQABDwkAAfgBAAED
-        CQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHw
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAD6
+        CwAAAk1TRnQBSQFMAwEBAAEIAQEBCAEBARgBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMA
+        ARgDAAEBAQABIAYAASQ2AAMBBAIEAwEEAwUBBwMFAQcDBAEFAwMBBAMDAQQDAQEC/wBRAAMBAQIDBgEI
+        AwoEDgETAxEBFwMUARsDFgEfAxYBHgMUARsDEQEXAw4BEwMLAQ8DBwEJAwIBA/8ARQADBAEFAxUBHQMo
+        ATwBPwJAAW4BTAFQAVIBlgFNAVsBXgGwAUsBagF0Ac4BQgFtAXwB2AFNAV8BZAG6AU4BVwFZAagBRQFG
+        AUcBfwM5AV8DJQE3Ax0BKQMPARQDBgEIAwEBAv8AOQADBQEHATUCNgFYAUMBhQGVAeIBNgGkAcUB/wFl
+        AbYBzgH/AY4ByQHcAf8BlwHQAeIB/wGHAcsB4AH/AXEBxwHdAf8BYAHCAdsB/wFLAbkB1wH/ATABpAHF
+        Af8BGgGMAbEB/wEcAX4BpQH6AUwBUgFVAaIDKAE9AxQBGwMGAQj/ADkAAUECQgFyATIBrgHQAf8BhwHW
+        AesB/wHYAfgC/wH1A/8B7wH9Av8B3gH5Av8ByAH0Av8BrgHwAf4B/wGVAeoB/QH/AXoB5gH9Af8BZwHk
+        Af0B/wFjAeMC/wF8AdoB8gH/AVUBqQHHAf8BRQFlAXEB0AIrASwBQwMJAQz/ADkAATABoAG/AfkBgAHe
+        AfcB/wGyAfIC/wHSAfUC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGrAe4B/AH/AZIB6AH7
+        Af8BdwHjAfsB/wFjAd8B+gH/AVwB3QH6Af8BmAHsAv8BvQHwAf4B/wE7AbEB2wH/AUYCRwGDAwYBCP8A
+        OQABPwGqAcUB+QGQAeoC/wGsAe4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/AdoB9wH+Af8BxAHyAf0B/wGr
+        Ae4B/AH/AZIB6AH7Af8BdwHjAfsB/wFjAd8B+gH/AVwB3QH6Af8BkgHoAfwB/wHEAfcC/wFNAcEB7AH/
+        AUYCRwGDAwYBCP8AOQABPQGnAcMB9wGNAegC/wGsAe4C/wHSAfUC/wHsAfsC/wHpAfoB/gH/Ad0B+QL/
+        AcgB9AL/Aa4B8AH+Af8BlQHqAf0B/wF4AeQB/AH/AWMB3wH6Af8BXAHdAfoB/wGSAegB/AH/AcIB9QL/
+        AUsBwQHrAf8CRgFHAYIDBgEI/wA5AAE+AacBwwH3AY0B6AL/Aa4B7wL/Ad0B+wb/AfwD/wHXAfUB/AH/
+        AbcB6gH3Af8BoQHnAfcB/wGJAeIB9gH/AXwB6AL/AW0B6QL/AWMB5QL/AZYB7AL/AcIB9QL/AUsBwQHs
+        Af8BRQJGAYEDBQEH/wA5AAE6AaoByQH6AZUB7gL/AaUB6gH8Af8BgwHNAeEB/wFXAbMBzgH/AT8BpgHD
+        Af8BRAGoAcQB/wFHAakBxgH/AT4BpgHEAf8BMAGfAb4B/wEdAZEBtAH/ARoBkQG1Af8BJwGjAcYB/wF3
+        AdEB6AH/Ac4B/gL/AVABxAHuAf8BRAJFAX8DAgED/wA5AAFKAXwBiQHYAUQBugHaAf8BQQGzAdEB/wF1
+        AccB3gH/AaoB2wHpAf8BsgHeAeoB/wGsAd4B7AH/AaAB3QHtAf8BjAHZAesB/wFzAdIB6QH/AVkBxwHj
+        Af8BSAHDAeAB/wE3AbMB0wH/ATEBnQG+Af8BNwGXAbYB/wErAZwBxQH+Az8BbQMDAQT/ADkAAU0BcgF6
+        AcsBSgG+Ad0B/wGZAeMB9gH/AcsB8gH8Af8B8AH9Av8B8gP/AeEB+wL/AckB9QL/AbAB8QL/AZYB6wH+
+        Af8BewHnAf4B/wFmAeMB/QH/AVsB3AH5Af8BhwHgAfUB/wF3AcEB2QH/AR8BjwGzAfkDPQFpAwcBCf8A
+        OQABPQGhAboB8wGIAeQB/QH/Aa4B7wL/AdMB9gL/AewB+wL/AekB+gH+Af8B2gH3Af4B/wHEAfIB/QH/
+        AasB7gH8Af8BkgHoAfsB/wF3AeMB+wH/AWMB3wH6Af8BXAHdAfoB/wGVAeoB/QH/AcAB8wL/AUQBuwHm
+        Af8BRQJGAYADBgEI/wA5AAFFAawByQH3AY0B6AL/AawB7gL/AdIB9QL/AewB+wL/AekB+gH+Af8B2gH3
+        Af4B/wHEAfIB/QH/AasB7gH8Af8BkgHoAfsB/wF3AeMB+wH/AWMB3wH6Af8BXAHdAfoB/wGSAegB/AH/
+        AcIB9QL/AUoBwwHuAf8CRgFHAYIDBgEI/wA5AAFGAa0ByQH3AYwB6AL/AawB7gL/AdQB9gL/AfEB/QL/
+        AfAB/QL/AeEB+gL/AcoB9QL/AbAB8QH+Af8BlgHrAf0B/wF7AeYB/gH/AWYB4gH8Af8BXQHeAfsB/wGS
+        AegB/AH/AcIB9QL/AUsBxAHuAf8CRgFHAYIDBgEI/wA5AAFHAa4ByQH3AY4B6QL/AbIB8QL/Ac8B9AH+
+        Af8B0QHuAfYB/wHAAecB8QH/Aa8B4gHvAf8BnQHdAe4B/wGJAdkB7AH/AXIB0wHqAf8BXAHOAeoB/wFO
+        Ac0B6gH/AVQB1gH0Af8BlwHsAv8ByQH5Av8BSwHEAe8B/wJGAUcBggMGAQj/ADkAAUgBsAHLAfcBhAHk
+        AfwB/wGDAdkB8AH/AZAB2AHrAf8BhAHQAeQB/wF0AcoB4QH/AWsBxQHdAf8BZwHCAdwB/wFlAcAB2gH/
+        AWABvQHYAf8BUwG5AdcB/wFKAbYB1gH/AUIBuQHaAf8BYwHGAeAB/wGfAd8B8AH/AU0BxgHwAf8CRgFH
+        AYIDBgEI/wA5AAFAAawByQH3AWMBzwHrAf8BdgHQAegB/wGIAdYB7QH/AakB5gH4Af8BvwHxAv8BwwHz
+        Av8BwgHzAv8BuwHwAv8BswHuAv8BqgHrAv8BlQHiAf0B/wFrAcsB6wH/AVkBugHaAf8BXwG7AdsB/wEu
+        Aa4B2QH/AUYCRwGCAwYBCP8AOQABRAGxAcwB+QGZAd8B8gH/AcIB8QL/AcAB8QL/AbsB7gH+Af8BuQHt
+        Af0B/wG3Ae0B/QH/AbAB6wH9Af8BqAHoAf0B/wGeAeQB/QH/AZEB4QH9Af8BjQHgAf4B/wGWAeQC/wGp
+        AewC/wGlAeQB+AH/AUwBuQHdAf8BRQJGAYADAgED/wA5AAFEAb8B3wH/AcYB8gL/AboB7gH9Af8BuAHt
+        Af0B/wG5Ae0B/QH/AbgB7QH9Af8BsQHrAf0B/wGoAegB/QH/AZ0B5AH9Af8BlAHhAf0B/wGSAeEB/gH/
+        AZwB4gH+Af8BqQHnAf4B/wG3AesC/wHZAfwC/wGEAdYB8gH/AUMCRAF6/wA9AAFFAUcBSAF/AWkBzAHm
+        Af8BtAHrAfsB/wHBAfEC/wG7Ae4B/gH/AbMB7AH+Af8BqQHoAf0B/wGeAeUB/QH/AZUB4QH9Af8BlAHi
+        Af4B/wGdAeQC/wGpAecC/wG8Ae4C/wHLAfIC/wGYAdIB5wH/AVIBbwF4AcgDGgEk/wA9AAMEAQYBMgIz
+        AVEBSgGfAbYB7wFiAcgB4wH/AYgB1wHuAf8BkQHdAfQB/wGUAd8B+AH/AZUB4gH+Af8BlAHiAv8BkgHg
+        Af0B/wGHAdcB8wH/AYQB0gHsAf8BaAHAAdwB/wFAAa4B0QH/AUwBUwFVAZoDEQEX/wBJAAMNARIDFgEe
+        ATwCPQFnAVABXAFgAasBTgFyAXwBzAFGAYMBkwHgAUMBhQGWAeMBSgF6AYQB1gFQAWMBaQG4AUkBTQFO
+        AYwDJAE1AxABFQMGAQj/AP8AtgABQgFNAT4HAAE+AwABKAMAAWADAAEYAwABAQEAAQEFAAEgAQEWAAP/
+        AQAB/wGAAT8JAAH8AQABDwkAAfgBAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHw
         AQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABAwkAAfABAAED
-        CQAB8AEAAQMJAAHwAQABBwkAAfABAAEHCQAB8AEAAQ8JAAH8AQABHwkAA/8JAAs=
+        CQAB8AEAAQMJAAHwAQABAwkAAfABAAEDCQAB8AEAAQMJAAHwAQABBwkAAfABAAEHCQAB8AEAAQ8JAAH8
+        AQABHwkAA/8JAAs=
 </value>
   </data>
   <metadata name="contextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
