--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -410,4 +410,7 @@ Please add a primary key to the table.</value>
   <data name="CloseWBAdviceToDelete" xml:space="preserve">
     <value>If you want to remove a connection, please close MySQL Workbench.</value>
   </data>
+  <data name="refresh_sidebar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\refresh_sidebar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
