--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -395,8 +395,9 @@ Please add a primary key to the table.</value>
   <data name="AppName" xml:space="preserve">
     <value>MySQL For Excel</value>
   </data>
-  <data name="ConnectFailedTryNewPassword" xml:space="preserve">
-    <value>Connection attempt failed.  Please re-enter your password to try again.</value>
+  <data name="ConnectFailedDetailWarning" xml:space="preserve">
+    <value>Connection attempt failed.
+Please re-enter your password to try again.</value>
   </data>
   <data name="ColumnMappedExchangeDetailWarning" xml:space="preserve">
     <value>This column has already been mapped, do you want to exchange mappings on the two columns?</value>
@@ -412,5 +413,8 @@ Please add a primary key to the table.</value>
   </data>
   <data name="refresh_sidebar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\refresh_sidebar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ConnectFailedTitleWarning" xml:space="preserve">
+    <value>Wrong Password</value>
   </data>
 </root>
