--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -426,4 +426,7 @@ Please re-enter your password to try again.</value>
   <data name="remove_col_mapping" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\remove_col_mapping.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="WorkSheetInCompatibilityModeWarning" xml:space="preserve">
+    <value>Excel WorkSheet is in Compatibility Mode which has a row limit of 65,535 rows.</value>
+  </data>
 </root>
