--- a/Installer/README
+++ b/Installer/README
@@ -1,6 +1,6 @@
-Excel for MySQL 1.0
+MySQL for Excel 1.0
 
-This is a release of Excel for MySQL, Oracle's dual-
+This is a release of MySQL for Excel, Oracle's dual-
 license utility addin for Microsoft Excel.  For the avoidance of
 doubt, this particular copy of the software is released
 under the version 2 of the GNU General Public License.
