Fix for bug #14368116 Some connections created on Workbench are marked as SSL connections.
Failed SSL connection rules to determine if the connection uses SSL due to null values on SSL parameters. The fix enabled SSL connections and added a detail message to warning dialog when the connection has SSL parameters and can’t connect. Sometimes it’s possible to connect without using SSL configuration.

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -429,4 +429,9 @@ Please re-enter your password to try again.</value>
   <data name="WorkSheetInCompatibilityModeWarning" xml:space="preserve">
     <value>Excel WorkSheet is in Compatibility Mode which has a row limit of 65,535 rows.</value>
   </data>
+  <data name="ConnectSSLFailedDetailWarning" xml:space="preserve">
+    <value>A possible fail reason could be that your user requires a SSL connection that is not supported by MySQL for Excel.
+
+Please check with the Administrator if you require a SSL Connection or if he can authorize your user to login without a SSL connection.</value>
+  </data>
 </root>
