Bug #14368490 - STORED PROCEDURE RESULTS WITH SEVERAL RESULTSETS HANG IMPORT FORM
- Added check in ImportDataToExcel method to stop if we are importing result sets vertically, the workbook is in compatibility mode and the next starting excel row will exceed the 65,535 lmit. (Controls\TaskPaneControl.cs).
- Added code in the ImportProcedureForm class to append the parameters table to the returning dataset only when there are output or return parameters in the Procedure.  Added code to sum the rows count of result sets to know if we are exceeding the 65,535 limit in compatibility mode to display a warning if the user chooses to return the resutl sets vertically since that will cause that some resultsets will not be imported to Excel. (Forms\ImportProcedureForm.cs, Forms\ImportProcedureForm.Designer.cs).
- Add resource strings for warning in ImportProcedureForm. (Properties\Resources.Designer.cs, Properties\Resources.resx).

--- a/source/Properties/Resources.resx
+++ b/source/Properties/Resources.resx
@@ -434,4 +434,10 @@ Please re-enter your password to try again.</value>
 
 Please check with the Administrator if you require a SSL Connection or if he can authorize your user to login without a SSL connection.</value>
   </data>
+  <data name="ImportVerticallyExceedsMaxRowsDetailWarning" xml:space="preserve">
+    <value>Rows in all result sets exceed the limit of 65,535 rows in Compatibility Mode, one or more Result Sets will be truncated.</value>
+  </data>
+  <data name="ImportVerticallyExceedsMaxRowsTitleWarning" xml:space="preserve">
+    <value>Import Exceeds Compatibility Mode Limit</value>
+  </data>
 </root>
