BUG 14370049 - THE AUTO MAPPING IS NOT WORKING PROPERLY
- Added IsSetOrEnum property to MySQLDataColumn class (Classes\MySQLDataColumn.cs).
- Moved the code that adds the chunkQuery variable to the out sqlQuery parameter in InsertDataWithManualQuery and AppendDataWithManualQuery methods (Classes\MySQLDataTable.cs).
- Fixed code in Type1FitsIntoType2 method to return true when the Type2 is set or enum besides being varchar or text. Fixed code in GetInsertingValueForColumnType method to add set and enum as types that need the MySQLDataUtilities.EscapeString run (Classes\Utilities.cs).
- Fixed code in the createColumnMappingForAutomatic method to use the columns DisplayName instead of ColumnName to fix a problem where changing the "First Row Contains Column Names" was not changing the mapped column names.

--- a/CHANGES
+++ b/CHANGES
@@ -1,1 +1,4 @@
-- Disabled Export button when table name is empty.
+- Fixed code so now "text" columns can be automatically mapped to set or enum columns.
+  Fixed code to properly change mapped column names when checking/unchecking the "First Row Contains Column Names" checkbox in the Append Data Form.
+  Oracle Bug 14370049 - THE AUTO MAPPING IS NOT WORKING PROPERLY)
+- Disabled Export button when table name is empty (Oracle Bug 14389853 - EXPORT BUTTON IS ENABLED WHEN TABLE NAME IS EMPTY)
