Commit for changes in MySQLForExcelConnectionsFile to create the connections file and load the connections in the Welcome Panel. MySQLForExcelConnectionsFile - Static class used to create the connections.xml file if file doesn't exist and when creating the file tries to auto add a new connection using a local running MySQL Service.

--- a/CHANGES
+++ b/CHANGES
@@ -2,3 +2,4 @@
   Fixed code to properly change mapped column names when checking/unchecking the "First Row Contains Column Names" checkbox in the Append Data Form.
   Oracle Bug 14370049 - THE AUTO MAPPING IS NOT WORKING PROPERLY)
 - Disabled Export button when table name is empty (Oracle Bug 14389853 - EXPORT BUTTON IS ENABLED WHEN TABLE NAME IS EMPTY)
+- Fix for Bug #14368158 - Connections created in MySQL For Excel unusable in Workbench.
